进行了游戏流程的汉化

--- a/manual/play-game.jade
+++ b/manual/play-game.jade
@@ -1,52 +1,52 @@
 section.manual
-  p: a(href="/play") 戻る
-  h1 游戏中の流れ
-  p 游戏中の操作を説明します。
-  p 月下人狼では、游戏中は基本的には<strong>手動の更新は不要</strong>です。他の人の发言などはリアルタイムで表示され、昼や夜の切り替わりも全员同時です。
-  p 游戏は一日目の夜から始まり、その後昼と夜を交互に繰り返します。
+  p: a(href="/play") 返回
+  h1 游戏流程
+  p 现在说明游戏的流程。
+  p 月下人狼这个游戏，在进行游戏的时候<strong>不必手动刷新网页</strong>。他人的发言可以实时在页面上显示，昼夜的切换也是全员同时进行。
+  p 游戏从第一天夜里开始，之后则反复进行昼夜交替。
 
   h2 昼
-  p 昼には話し合いをして、处刑投票を行います。处刑投票は話し合い中でもいつでも行えますが、<strong>一度投票すると変えられない</strong>ので注意して下さい。話し合いがまとまってからのほうがよいでしょう。
+  p 白天用于对话和投票处刑。虽然在对话中随时可以进行处刑投票，但请注意<strong>一旦投完票就无法反悔</strong>，所以建议还是先通过对话来寻找线索。
   p
-    img(src="/images/manual-play-game-1.png",alt="昼の投票・发言フォーム")
-  p 昼は发言フォームが上の画像のようになります。上部に处刑投票用フォームが表示されています。投票するときは投票先を選択して「投票する」ボタンを押してください。
-  p その下は发言フォームです。これは夜にもあります。
-  p 「普通」となっているセレクトボックスは「小さく」「普通」「大きく」があり、文字の大きさを選べます。注目を集めたかったり重要なことを言うときは大きくするなどして下さい。
-  p その横の「向全员发言」は、发言の種類を指定します。昼の場合は、全员に向けて发言する「向全员发言」と、自己しか見えない「自言自语」があります。自言自语も人狼が终了したあとは見えるので、自己の本心を書いておいたりするとあとでみた人が楽しめるかもしれません。
-  p 「複数行」にチェックを入れると、複数行发言が可能です。
-  p その右の「昼 5:23」は、現在の状态（昼か夜か）とその残り时间です。この場合、昼の話し合いはあと5分23秒で终了することを示しています。
-  p その右の「<b>遗言</b>」ボタンは、遗言を使用する設定になっているときだけ使えます。遗言は、处刑されたり襲われたりして死ぬときにメッセージを残せる機能です。遗言はいつでも書くことができます。
-  p 遗言ボタンを押すと遗言編集フォームが出現します。編集して决定すると戻ります。
-  p その右の「<b>规则</b>」ボタンは、現在の配役や其他の规则を確認できるボタンです。
-  p 最後の「全部」と書いてあるセレクトボックスは、表示するログを選択できます。
-  p ログを一日ごとに表示できるほか、今日の分だけ表示する「今日」という選択肢もあります。
+    img(src="/images/manual-play-game-1.png",alt="白天的投票・发言框体")
+  p 白天的发言框体如上图所示。上方是处刑投票用的框体，投票时先选好要投票的对象，而后点击“投票”按钮。
+  p 下方则是发言框体，夜间也可以使用。
+  p 在显示着“普通”的下拉框中可以选择“以小字号发言”、“普通”、“以大字号发言”来选择发言字体。想要吸引他人注意，或发表重要言论时，可以选择以大字号发言。
+  p 在旁边的“向全员发言”下拉框中，可以选择发言的种类。如果是白天，可以选择向全员发言的“向全员发言”或者只有自己能看见的“自言自语”。结束游戏了的人也可以看见自言自语，在这里抒发本心的话也能为看见的人增加一些乐趣吧。
+  p 如勾选“复数行”复选框，则发言时可以输入复数行。
+  p 右侧的“昼 5:23”表示的是现在的状态（昼/夜）及剩余时间。图中文字表示的是，白天的对话时间还有5分23秒就要结束。
+  p 再右侧的“<b>遗言</b>”按钮，只有当想要设定遗言的时候才使用。所谓遗言，指的是玩家被处刑或被袭杀时留下的信息。玩家活着的时候，任何时候都可以修改遗言。
+  p 点击遗言按钮，页面会显示编辑遗言的文本框，编辑完毕后点击“确定”，文本框会自动关闭。
+  p 再右侧的“<b>规则</b>”按钮，可用来显示本局游戏的角色一览，以及其他规则信息。
+  p 最末尾的“全部”下拉框，则可以用来筛选对话记录。
+  p 对话记录可以按日筛选，如果只看今天的对话可以选“今日”。
   hr
   p
-    img(src="/images/manual-play-game-2.png",alt="投票後のフォーム")
-  p 投票すると、このように緑のログが出ますが、これは<strong>自己にしか見えません</strong>ので安心して下さい。
-  p 投票すると上の投票フォームは消えます。
-  p 昼が终了して、まだ投票していない人がいる場合は犹豫时间になります。この时间は、发言はできませんが投票はできます。犹豫时间が終わってもまだ投票していない人は<strong>突然死</strong>します。これは<strong>重大なマナー違反</strong>なので避けましょう。
+    img(src="/images/manual-play-game-2.png",alt="投票后的框体")
+  p 投票后，界面上会显示类似图中的绿色记录，玩家的投票记录<strong>只有自己能看见</strong>所以不必担心暴露。
+  p 投票完毕后，上方的投票框体会被隐藏。
+  p 白天结束时，如果存在还未投票的人，系统会进入犹豫时间。犹豫时间中，玩家不能发言、只能投票。如果犹豫时间结束时仍没有投票的人会<strong>猝死</strong>。因为猝死<strong>非常不可取</strong>所以请尽量避免。
 
   h2 夜
-  p 全员が投票し終わると、最多の票数をもらった人が处刑されて夜になります。
-  p 夜は、人狼が話し合いをしたり、占卜师や猎人が能力の対象を選択します。
+  p 全员投票结束后，得票最高的人会被处刑，而后游戏会切换到夜间。
+  p 在夜晚，人狼们可以互相对话，占卜师和猎人等夜间可以使用能力的人也可以选择对象并使用能力。
   p
-    img(src="/images/manual-play-game-3.png",alt="夜の猎人の様子")
-  p この画像は夜の猎人の様子です。投票フォームの代わりに护卫フォームが出現しています。また、夜の发言フォームは、人狼や共有者以外は「自言自语」のみです。自言自语は<strong>他の人には聞こえません</strong>。あとで見返したときに自己の推理が分かるように残しておくのもよいでしょう。
-  p 能力を発動すると赤いログが出現しますが、これも<strong>他の人には見えません</strong>ので安心して下さい。
+    img(src="/images/manual-play-game-3.png",alt="猎人在夜晚的界面")
+  p 上图表示了猎人在夜晚的界面。在原本显示投票框体的地方显示了护卫框体。此外，夜间的发言框体也有所变化，人狼及共有者以外的玩家只能选择“自言自语”。自言自语<strong>不会被别人看见</strong>。可以把自己的推理写上去，而后回过头来对照。
+  p 发动能力时，界面上会显示类似图中的红色记录，因为这也<strong>不会被别人看见</strong>所以敬请安心。
   p
-    img(src="/images/manual-play-game-4.png",alt="夜の人狼の様子")
-  p この画像は人狼の様子です。人狼は襲う人を選択できますが、2人以上人狼がいても襲えるのは1人だけなので、早い者勝ちです。しかし、襲う人はよく相談して決めましょう。
-  p また人狼は自言自语の他に「人狼的会话」が利用可能で、これを用いると人狼同士で会話が可能です。この会話は、下の画像のように人狼以外には「嗷呜・・・」という遠吠えとして聞こえます。
+    img(src="/images/manual-play-game-4.png",alt="人狼在夜晚的界面")
+  p 上图表示了人狼在夜晚的界面。人狼可以选择要袭击的人，但不管有几头人狼，只有最手最快的人狼可以选择成功，所以还请人狼们通过对话来确定要袭击的对象。
+  p 人狼除了自言自语，还可以选择“人狼的对话”，与其他人狼进行对话。人狼间的对话，就如下图所示，对于人狼以外的玩家，都会用“嗷呜——”来进行打码，不会被看见具体内容。
   p
     img(src="/images/manual-play-game-5.png",alt="夜の村人の様子",title="※村人の騙りはやめましょう")
   h2 灵界
   p
-    img(src="/images/manual-play-game-6.png",alt="灵界の様子")
-  p 上の画像のように、处刑されたり襲われたりして死んだ人は<b>灵界</b>という場所にいることになります。
-  p 灵界では、全ての人的职业や会話を把握しながら観戦できます。また、灵界で发言すると、同じく灵界にいる人にしか聞こえませんので安心して会話できます。
-  h2 游戏が终了したら
-  p 昼と夜を繰り返すうちに人数が減少して、そのうち游戏が终了します。终了したら、灵界と同じように、全员的职业や发言が全部見えるようになるので、ログを見直してみるのもおもしろいでしょう。
-  p また「以相同设定建立新房间」ボタンが全员に出現します。これを押すと同じ設定で次の部屋を建てられます。ただし部屋名などは新しく決められますし、建てた後に設定を変えることも可能です。部屋を建てるときは重複しないように、建てると宣言してから建てるのがよいでしょう。部屋の建て方は、<a href="play-owner">オーナーの流れ</a>を参照して下さい。
-  h2 おかしいときは
-  p この人狼は基本的に手動の更新は不要ですが、タイミングの関係で動作がおかしくなる場合があります。たとえば他の人の发言が2重に表示されたり、时间が0になっても画面が切り替わらないときは、<strong>ブラウザの更新ボタンを押す</strong>か<strong>F5キーを押す</strong>などして<strong>ページを更新する</strong>とだいたい直ります。
+    img(src="/images/manual-play-game-6.png",alt="灵界的界面")
+  p 如上图所示，被处刑或被袭杀的人会进入被称为<b>灵界</b>的场所。
+  p 在灵界中的玩家可以看见全部人的角色和对话，随意观战。此外，灵界中的发言只能被同样在灵界中的人看见，所以可以安心对话。
+  h2 游戏结束后
+  p 随着昼夜不断交替，玩家的人数也逐渐减少，直到游戏结束。游戏结束后，全部人都可以像已在灵界中的玩家一样，看见全员的职业和发言，也可以从头查看全部的游戏记录。
+  p 此时，“以相同设定建立新房间”按钮会出现在全员的界面中。如果点击此按钮，则会以相同的设定建立下一个房间，只是，房间的名字需要另起一个。新建房间后，仍可以修改游戏的设定。另外请大家不要重复建太多房间，要建房间的人事先向大家说明一下。建房间的方法，请参考<a href="play-owner">房主指南</a>。
+  h2 如果出现异常
+  p 本游戏中，基本不需要手动刷新网页，但偶尔会发生计数器故障导致的异常。比如，若是发现别人的发言都被重复了2次、或者昼夜倒计时为0但界面不自动切换时，<strong>请点击浏览器的刷新按钮</strong>或者<strong>按下F5按钮</strong>以<strong>刷新页面</strong>的方法来解决问题。
