--- a/client/templates/game/rooms.jade
+++ b/client/templates/game/rooms.jade
@@ -17,8 +17,8 @@ section.rooms
   p
     a(href="/newroom") 新建房间
     |  | 
-    a(href="/rooms",title="現在募集中・对战中の部屋です。部屋に参加したい場合ここを探しましょう。") 活动房间一览
+    a(href="/rooms",title="现在募集中・对战中の部屋です。部屋に参加したい場合ここを探しましょう。") 活动房间一览
     |  | 
-    a(href="/rooms/old",title="建てられたのに開始されず放置された部屋です。そのうち消えます。") 陈旧房间一览
+    a(href="/rooms/old",title="建てられたのに开始されず放置された部屋です。そのうち消えます。") 陈旧房间一览
     |  | 
     a(href="/rooms/log") 结束房间一览
