--- a/manual/features.jade
+++ b/manual/features.jade
@@ -1,5 +1,5 @@
 section.manual
-  p: a(href="/manual") 返回
+  p: a(href="/manual/play") 返回
   h1 本人狼游戏的特点
   
   h2 实时性
@@ -10,7 +10,7 @@ section.manual
   
   h2 注册制
   p 这个人狼游戏使用<strong>注册制</strong>。注册即玩。注册过程只需要输入一组<b>账号</b>与<b>密码</b>，密码文本不会明文保存。
-  p 注册<b>账号</b>后决定一个用户名（<b>昵称</b>），一般情况下参与游戏时账号将被公开（此时他人可以访问您的个人页面），以设定的昵称加入游戏（昵称可以随时在个人中心变更）。
+  p 注册<b>账号</b>后决定一个用户名（<b>昵称</b>），一般情况下参与游戏时账号将被公开（此时他人可以访问您的个人页面），以设定的昵称加入游戏（昵称可以随时在个人页面变更）。
   p 此外，也存在不公开账号，需要在加入游戏时设定昵称的<b>匿名模式</b>。
 
   h2 丰富的职业
