--- a/manual/play-game.jade
+++ b/manual/play-game.jade
@@ -1,6 +1,6 @@
 section.manual
-  p: a(href="/play") 返回
-  h1 游戏流程
+  p: a(href="/manual/play") 返回
+  h1 游戏开始后的流程
   p 现在说明游戏的流程。
   p 月下人狼这个游戏，在进行游戏的时候<strong>不必手动刷新网页</strong>。他人的发言可以实时在页面上显示，昼夜的切换也是全员同时进行。
   p 游戏从第一天夜里开始，之后则反复进行昼夜交替。
