--- a/manual/play.jade
+++ b/manual/play.jade
@@ -1,29 +1,29 @@
 section.manual
   p: a(href="/manual") 返回
-  h1 遊び方
-  p このページでは、月下人狼においての人狼の遊び方について解説します。
-  p 人狼そのものの规则については、<a href="/manual/rule">规则</a>を参照して下さい。
+  h1 游戏方法
+  p 本页面将对参与月下人狼游戏的方法进行解说。
+  p 人狼游戏的规则请参照<a href="/manual/rule">规则</a>页面。
   
-  h2 登録
-  p このサーバーでは、まず<b>ユーザー登録</b>をしないと加入游戏できません。まず<a href="/">トップページ</a>から新規登録して下さい。
-  p 登録に必要なのは、ユーザーIDと密码だけです。
-  p その後は、<a href="/my">マイページ</a>から表示上の<b>名字</b>を変更できます。
-  p この名字は人狼に参加するときにも使われてIDも公開されますが、<b>匿名模式</b>の部屋の場合は、その場で名字を決めて入室してIDは明かされません。
+  h2 注册
+  p 在本服务器，玩家必须<b>注册账号</b>之后才能加入游戏。请在<a href="/">首页</a>进行注册。
+  p 注册过程中只需要一组账号与密码。
+  p 注册了账号之后，可以在<a href="/my">个人页面</a>中改变向他人展示的<b>昵称</b>。
+  p 这个昵称将在加入游戏时作为玩家的名字公开显示，在<b>匿名模式</b>的房间里，所显示的名字是加入游戏时临时设定的，玩家的昵称将不会显示。
  
-  h2 遊ぶまでの流れ
-  p 人狼を遊ぶには、まず誰かが新しい<strong>部屋</strong>を作ります。部屋を作った人は<b>オーナー</b>になり、游戏の规则設定をして游戏を開始させる役割を持ちますが、これはいわゆる<strong>GMではありません</strong>（ただし、GMになることもできます）。游戏が開始したあとは、オーナーも他の人と同じように参加できます。
-  p 既に部屋があればその部屋に参加したり、無ければ部屋を作って人を集めましょう。
-  p 游戏開始までの詳しい流れは以下のページを参照して下さい。
+  h2 游戏的准备工作
+  p 为了进行一场人狼游戏，首先需要某个人建造一个<strong>房间</strong>。建造房间的人被称为<b>房主</b>，房主持有设定游戏规则和开始游戏的权力。虽然如此，房主<strong>并不一定等同于GM</strong>（虽然GM一定是房主）。游戏开始后，房主将与其他玩家以相同的状态进行游戏。
+  p 如果已经有房间了就加入那些房间，如果没有房间就建立一个房间召集其他人进行游戏吧。
+  p 游戏开始前的详细流程请参照下面的页面。
   ul
     li
-      a(href="play-owner") オーナーの流れ
+      a(href="play-owner") 房主的操作流程
     li
-      a(href="play-other") オーナー以外の流れ
+      a(href="play-other") 房主以外的操作流程
   
-  h2 游戏が始まったら
-  p <a href="play-game">游戏中の流れ</a>を参照して下さい。
+  h2 游戏开始后
+  p <a href="play-game">游戏中的流程</a>。
   
   h2 注意
-  p 人狼に参加する前に、<a href="prohibited">禁止行為</a>に目を通すようにしましょう。
-  p また、人狼中の发言は誰でも見ることができます（房间加密の部屋でも终了後は公開されます）。個人情報などは公開しないように注意して下さい。
+  p 加入游戏前，请务必阅读本服务器的<a href="prohibited">禁止行为</a>。
+  p 此外，游戏中的发言对所有人都是可见的（即便加密的房间，在对战结束后也将会解密）。请注意保护您自身的隐私信息。
   
