--- a/manual/top.jade
+++ b/manual/top.jade
@@ -2,12 +2,13 @@ section.manual
   h1 参考手册
   p 本游戏的参考手册。
   p 各职业的详细介绍，请以<a href="http://jinrou-doc.uhyohyo.net/" target="_blank">官方日文文档</a>为准。
+  p 本页面的文本量较大，欢迎各位人狼爱好者加入<a href="https://github.com/Sunev/jinrou/tree/translate/manual" target="_blank">翻译</a>。
   h2 页面一览
   ul
-    li: a(href="/manual/features") 游戏简介
+    li: a(href="/manual/features") 游戏特色
     li: a(href="/manual/spec") 游戏说明
     li: a(href="/manual/rule") 游戏规则
-    li: a(href="/manual/play") 游戏方法（暂无翻译）
+    li: a(href="/manual/play") 游戏流程（正在翻译）
     li: a(href="/manual/prohibited") 禁止行为・注意事项（暂无翻译）
     li: a(href="/manual/welcome") 人狼入门（暂无翻译）
     li: a(href="/manual/joblist") 职业一览
