--- a/manual/welcome2.jade
+++ b/manual/welcome2.jade
@@ -49,7 +49,7 @@ section.manual.long
       p 人狼が2人しかいないならば、<b>真狂-真狼</b>（占卜师に本物と狂人がいて、灵能者には本物と人狼がいる形）または<b>真狼-真狂</b>（占卜师に本物と人狼がいて、灵能者に本物と狂人がいる形）があります。
       p もっと参加人数が多くて人狼が3人の場合は、人狼が2人騙ることが不可能ではないので<b>真狼-真狼</b>や<b>狂狼-真狼</b>、<b>真狼-狂狼</b>などもありますが、これらは確率が低めです。なぜなら、この3つはいずれの場合も何らかの<strong>欠け</strong>が起こっているからです。欠けとは、<b>初日犠牲者</b>（替身君）に何らか的职业（村人以外）が割り当てられることです。この場合2日目昼の時点で死んでいるので、全员がCOし終わっても本物がいないということが起こり得ます。1つ目は狂人がCOしていないので狂人欠け、2つ目は真占卜师がいないので占卜师欠け、3つ目は灵能者欠けです。
       p また、それほど多い人数になると、<strong>妖狐</strong>が騙っている可能性も考慮せねばならず、パターンは多くなります。
-      p 白進行ならば、この場合は主に2つの選択肢があります。一つは<strong>グレラン</strong>で、もう一つは<strong>灵能ローラー</strong>です。
+      p 白進行ならば、この場合は主に2つの选择肢があります。一つは<strong>グレラン</strong>で、もう一つは<strong>灵能ローラー</strong>です。
       p グレランは、グレー（占卜师から白をもらっていないし、何もCOしていない人）の中から適当に1人处刑することです。
       p グレランの利点は<b>灵能者</b>を生かしておいて反応を見ることができる（灵能者視点で狼が残り何匹かを知ることができる）点などです。逆にデメリットは、2人いる灵能者を放置しておくと最終的に处刑してしまう機会がなくなり灵能者を騙る狼が生き残ってしまう可能性が大きいことや、序盤からグレランするとまだ占卜师の情報が少なくてグレーの幅が広いため狼が吊れにくい点などです。
       p それに対し灵能ローラー（<b>霊ロラ</b>と略されることも）は、複数いる灵能者を全员順番に处刑してしまうことです。
