--- a/manual/play-other.jade
+++ b/manual/play-other.jade
@@ -1,22 +1,22 @@
 section.manual
-  p: a(href="/play") 戻る
+  p: a(href="/manual/play") 返回
   h1 オーナー以外の流れ
   p 既にある部屋に参加する手順を説明します。
 
   h2 部屋を探す
-  p <a href="/rooms">房间一览</a>に、現在たっている部屋の一览が表示されています。状态が「募集中」の部屋が、これから参加できる部屋です。
+  p <a href="/rooms">房间一览</a>に、现在たっている部屋の一览が表示されています。状态が「募集中」の部屋が、これから参加できる部屋です。
   p <img src="/images/lock.png" alt="鍵">鍵のマークがついている部屋は房间加密の部屋で、入るときに密码を入力する必要があります。<strong>房间加密の部屋でも、终了した後は全员に公開されます。</strong>
-  p <img src="/images/blind.png" alt="匿名模式">このマークがついている部屋は<b>匿名模式</b>の部屋です。ふつうの部屋では、登録時に設定したユーザーIDと、設定したユーザー名を使って部屋に参加します。それに対し匿名模式の部屋では、その場で名字を決めてユーザーIDも分からないので、互いに誰か分かりません。
+  p <img src="/images/blind.png" alt="匿名模式">このマークがついている部屋は<b>匿名模式</b>の部屋です。ふつうの部屋では、登録時に设定したユーザーIDと、设定したユーザー名を使って部屋に参加します。それに対し匿名模式の部屋では、その場で名字を決めてユーザーIDも分からないので、互いに誰か分かりません。
   p <img src="/images/gm.png" alt="GM">このマークがついている部屋は有GMの部屋です。GMは、加入游戏せずに動向を見守る人です。
   p 部屋名のリンクを開くとその部屋に入りますが、この時点では<strong>まだ加入游戏することにはなりません</strong>ので、気軽に部屋を開いて構いません。
 
   h3 加入游戏する
-  p 部屋を開くと最初は观战者として部屋を見ていることになります。加入游戏していなくても、发言フォームから发言して会話できます。
+  p 部屋を開くと最初は观战者として部屋を見ていることになります。加入游戏していなくても、发言表单から发言して会話できます。
   p 「加入游戏」ボタンが表示されているので、クリックすると加入游戏できます。匿名模式の場合はこのとき名字を入力できます。
   h3 加入游戏したら
   p 加入游戏すると、「退出游戏」「准备/取消准备」「帮手」の3つのボタンがあります。
   p 「退出游戏」ボタンを押すと参加を取りやめて游戏から抜けます。
-  p 「准备/取消准备」ボタンを押すと、参加者一览の自己の名字の下に<b>[ready]</b>というマークがつきます。これで游戏を開始する準備ができたことになります。オーナーは全员が<b>[ready]</b>をつけないと游戏を開始できないので、準備ができたら<b>[ready]</b>をつけてください。
+  p 「准备/取消准备」ボタンを押すと、参加者一览の自己の名字の下に<b>[ready]</b>というマークがつきます。これで游戏を开始する準備ができたことになります。オーナーは全员が<b>[ready]</b>をつけないと游戏を开始できないので、準備ができたら<b>[ready]</b>をつけてください。
   p <b>[ready]</b>をつけている間はいつ始まってもいいように、目を離さないようにして下さい。席を外す場合は一旦<b>[ready]</b>を外して下さい。
   p 「帮手」ボタンを押すと自己が<b>帮手</b>になります。帮手は加入游戏せず、他の人だれか一人に付き添って建议をする役になれます。
   p 帮手は游戏中、ヘルプ対象の人と同じ視点を持ち、ヘルプ対象の人だけに能听到ように发言できます。ヘルプ対象の人は自言自语で喋ることで、帮手と会話できます。
@@ -24,4 +24,4 @@ section.manual
   p 帮手になった人には<b>[帮手]</b>マークがつきます。帮手になっても<b>[ready]</b>マークはつける必要があるので注意して下さい。
 
   h3 游戏が始まったら
-  p <b>[ready]</b>をつけて待っていると、そのうちオーナーが游戏を開始します。游戏を開始したあとについては、<a href="play-game">游戏中の流れ</a>を参照して下さい。
+  p <b>[ready]</b>をつけて待っていると、そのうちオーナーが游戏を开始します。游戏を开始したあとについては、<a href="play-game">游戏中の流れ</a>を参照して下さい。
