--- a/manual/prohibited.jade
+++ b/manual/prohibited.jade
@@ -40,12 +40,12 @@ section.manual
     dt 使用しない部屋を作成する行為
     dd
       p 人狼をプレイする目的以外で部屋を作成する行為は、当人狼サーバーの目的に反するため禁止されます。
-      p 具体的には、部屋を作成してすぐ廃村にする、部屋を作成したあと放置するなどが該当します。
-      p 部屋を作成したものの人が集まらなかったためやむを得ず廃村にする場合などはこれに該当しません。
+      p 具体的には、部屋を作成してすぐ废村にする、部屋を作成したあと放置するなどが該当します。
+      p 部屋を作成したものの人が集まらなかったためやむを得ず废村にする場合などはこれに該当しません。
 
   h2 ローカル规则について
   p 部屋には自由にローカル规则を設けることができます。ローカル规则とは、上に定められた以外にその部屋にのみ特別に適用される禁止行為あるいは行動規程を指します。ただし、上記の禁止行為規定に反する规则は設けられません。
-  p ローカル规则は、<strong>游戏開始前に参加者全员に周知され、了解を得ていること</strong>が必要です。ローカル规则の内容は部屋の参加者で合議のうえ決めることができますが、最終的には部屋のオーナーが定めるものとし、ローカル规则に反対する参加者を部屋から追い出すことは認められます。
+  p ローカル规则は、<strong>游戏开始前に参加者全员に周知され、了解を得ていること</strong>が必要です。ローカル规则の内容は部屋の参加者で合議のうえ決めることができますが、最終的には部屋のオーナーが定めるものとし、ローカル规则に反対する参加者を部屋から追い出すことは認められます。
   
   h2 注意事項
   p 以下の行為は<strong>このサーバーでは禁止されません</strong>が、部屋のローカル规则として禁止することは認められます。
