--- a/manual/quantumwerewolf.jade
+++ b/manual/quantumwerewolf.jade
@@ -7,25 +7,25 @@ section.manual
   p 量子人狼は、只限村人・人狼・占卜师が登場します。量子人狼では各参加者的职业は重ねあわせで表現されています。死亡した場合、波動関数が収束して职业が確定します。
   p 毎日<b>概率表</b>が公開されます。これは、各プレイヤーが人类である確率・人狼である確率・すでに死亡している確率の一览です。
   p 昼の投票で处刑された参加者は確実に死亡します（死亡確率が100%になります）。
-  p 各参加者は夜になると、占卜师である確率が0でない限り、占い対象を選択して结果を得ます（それに伴って確率が変動します）。また、人狼である確率が0でない限り、襲う対象を選択して襲います。襲われた対象はそれだけだと死亡しません（すでに死亡している確率などが変動します）。
+  p 各参加者は夜になると、占卜师である確率が0でない限り、占い対象を选择して结果を得ます（それに伴って確率が変動します）。また、人狼である確率が0でない限り、襲う対象を选择して襲います。襲われた対象はそれだけだと死亡しません（すでに死亡している確率などが変動します）。
 
   h2 決着について
   p 各参加者は死亡すると职业が確定します。
   p 人狼が全て死んでいることが確定した場合、村人胜利となって终了します。
   p 同样に、生存している参加者が人狼であると確定した場合で、人狼の人数が生存者の過半数を超えている場合は人狼胜利となって终了します。
-  p まれに各プレイヤーの選択によって矛盾が発生する場合があります。その場合は平局になります。
+  p まれに各プレイヤーの选择によって矛盾が発生する場合があります。その場合は平局になります。
 
   h2 量子人狼をプレイするには
   p 通常の人狼と同样に部屋を作って参加します（<a href="play">遊び方</a>を参照）。
-  p 配役選択のときに「量子人狼」を選択すれば、量子人狼がプレイできます。
+  p 配役选择のときに「量子人狼」を选择すれば、量子人狼がプレイできます。
 
-  h2 設定項目
-  p このサーバーでは、以下の設定項目があります。
+  h2 设定項目
+  p このサーバーでは、以下の设定項目があります。
   dl
     dt 概率表の表示方法
     dd 
-      p 概率表を<b>プレイヤー名</b>で表示するか<b>プレイヤー番号</b>で表示するか設定できます。原案ではプレイヤー番号を表示することになっています。
-      p プレイヤー番号で表示する場合は、各プレイヤーには自己のプレイヤー番号が知らされます。他の人のプレイヤー番号はわかりません。会話や対象選択はプレイヤー番号ではなくプレイヤー名で行います。
+      p 概率表を<b>プレイヤー名</b>で表示するか<b>プレイヤー番号</b>で表示するか设定できます。原案ではプレイヤー番号を表示することになっています。
+      p プレイヤー番号で表示する場合は、各プレイヤーには自己のプレイヤー番号が知らされます。他の人のプレイヤー番号はわかりません。会話や対象选择はプレイヤー番号ではなくプレイヤー名で行います。
     dt 占卜师の確率を表示するか
     dd 原案では表示する確率は「人类である確率」「人狼である確率」「既に死亡している確率」の3つですが、人类である確率を「村人である確率」と「占卜师である確率」に分けて表示することが可能です。
 
@@ -39,9 +39,9 @@ section.manual
   p 占いの结果は、その人が占卜师だった場合に占い対象が人狼かどうかの条件付き確率に基づいてランダムに決められ、それと矛盾するパターンは削減されます。例えば、占いで人狼という结果が出た場合、自己が占卜师でかつ占い対象が村人であるというパターンが消されます。一般にこの場合、占い対象が村人であるパターンが消えたので、その人が人狼である確率は上昇します。
   h3 人狼が襲った時の確率変動
   p 人狼が参加者を襲った場合、襲った先も人狼であるパターンは削減されます。人狼は人狼を襲えないからです。また、自己が人狼であり相手が人狼でないパターンでは全て、襲われた人が死亡したことになります。
-  p また、人狼が2人以上いる場合も襲えるのは1人です。このため、各人狼には内部的に序列が設定してあり、生存している中で一番序列が高い人狼の襲い先が有効となります。序列が違うと異なるパターンとなるので、同じAさんとBさんが人狼という場合でも、Aさんが序列1でBさんが序列2というパターンとAさんが序列2でBさんが序列1というパターンは両方存在します。
+  p また、人狼が2人以上いる場合も襲えるのは1人です。このため、各人狼には内部的に序列が设定してあり、生存している中で一番序列が高い人狼の襲い先が有効となります。序列が違うと異なるパターンとなるので、同じAさんとBさんが人狼という場合でも、Aさんが序列1でBさんが序列2というパターンとAさんが序列2でBさんが序列1というパターンは両方存在します。
   h3 处刑以外で参加者が死ぬ場合
   p 一般に、夜に誰かに襲われた場合既に死亡している確率が上昇します。この確率が100%になった場合、处刑されていなくても死亡し、职业が収束します。ただし、この場合人狼にはなりません。なぜなら、死亡確率が100%ということはどのパターンにおいても人狼に襲われていたということで、その場合自己が人狼であるというパターンは存在していないからです。
 
   h3 具体例
-  p 量子人狼は、各プレイヤーの選択と矛盾が生じないように進行します。例えばAさんがBさんを占って结果が人狼だったのに、Bさんを处刑したら村人に収束した場合、その時点でAさんが占卜师である確率は0になります。また、ある人が处刑されて序列が高い人狼に収束した場合、その人が今までに襲った人は襲われたことが確定するので同時に死亡します。そのため、序列の高い人狼が確定したら同時に何人か死ぬのが一般的です。
+  p 量子人狼は、各プレイヤーの选择と矛盾が生じないように進行します。例えばAさんがBさんを占って结果が人狼だったのに、Bさんを处刑したら村人に収束した場合、その時点でAさんが占卜师である確率は0になります。また、ある人が处刑されて序列が高い人狼に収束した場合、その人が今までに襲った人は襲われたことが確定するので同時に死亡します。そのため、序列の高い人狼が確定したら同時に何人か死ぬのが一般的です。
