--- a/manual/welcome.jade
+++ b/manual/welcome.jade
@@ -53,7 +53,7 @@ section.manual.long
             p ちなみに、グレーと言う場合何かをCOした人は入りません。気をつけるべきことは、他的职业者（灵能者など）や、対抗として出てきた偽の占卜师を占うのは避けたほうがいいということです。なぜなら、他の参加者にとってその情報はほとんど意味がないからです。ちなみに、対抗の占卜师を占った場合、村人判定が出る場合も人狼判定が出る場合もあります。もし村人判定が出たならば、その偽占卜师は<b>狂人</b>です。人狼判定が出たならばその偽占卜师は<b>人狼</b>です。狂人は人狼阵营ですが村人として数えられますから、場合によっては「狂人まで吊っている余裕がない」（人狼だけを的確に吊らないと負けてしまう）という場合もありますが、基本的には狂人だろうと人狼だろうと人外（村人阵营以外の人）ならば吊ってしまえばいい話なので、対抗が狂人であるか人狼であるかの情報には大して価値がないことが多いのです。
             p 灵能者を占うのも同样です。どうせ、灵能者を占って村人判定が出たとしても、真灵能者（本物の灵能者）か、あるいは狂人の騙りであるかは判断できませんので意味はほとんどありません。
             p また、グレーを占う場合でも、「ほっといても吊られそうな人」は占わないほうがいい場合が多いです。例えば、口数が少ない人などですね。占わなくても、吊られてしまえば<b>灵能者</b>が判断してくれます（后述）し、吊ってそれで人狼だったならばラッキーです。それよりは、生き残りそうな人のほうを占っておいたほうが有意義です。また、その灵能者そのものも、处刑されてしまうことが多いので占わないのが無難です。
-            p また、占卜结果を発表する場合は「占い理由」が伴っていると信用が上がることでしょう。游戏開始直後の1日目夜の占いは何も情報がないのでどうしようもないですが、それ以降はグレーの人でも「发言内容」とか「誰に投票したか」などが理由になります。
+            p また、占卜结果を発表する場合は「占い理由」が伴っていると信用が上がることでしょう。游戏开始直後の1日目夜の占いは何も情報がないのでどうしようもないですが、それ以降はグレーの人でも「发言内容」とか「誰に投票したか」などが理由になります。
         section
           h4 呪殺について
           p 占卜师は、妖狐を占った場合、その人を<strong>呪殺</strong>します。これは「銃殺」と呼ばれることもあります。呪殺が起こった場合、<b>朝の死体</b>が2つになります（ただし、人狼の襲撃が失敗した場合（妖狐を襲撃または猎人のGJ（后述））は1つしかありません）。こういった場合、占卜师からはどちらが妖狐かが確定しますが、他の村人からはどちらが妖狐で、どちらが人狼に襲われたのか分かりません。いずれにしろ、ここでその2人以外を占ったと主張する占卜师は、破綻（本物である可能性がなくなること）したことになります。
@@ -81,7 +81,7 @@ section.manual.long
         summary 猎人は人狼に襲われたくない人を守ります。基本はCOしてはいけません。
         p <b>猎人</b>は、前述の通り人狼から村人を守る职业です。猎人の役目とはつまり、<strong>死んでほしくない人を確実に守ること</strong>です。
         p 人狼にとって、猎人はとても邪魔な存在です。殺したい人を殺せないかもしれないからです。また、GJ（Good Job: 猎人が护卫に成功すること）が起こると<strong>吊り回数</strong>が増えることがあり、そうすると人狼は不利になります。
-        p 吊り回数というのは、例えば現在10人のとき、处刑で1人、人狼に襲われて1人死ぬので1日で計2人死ぬと考え、これを「10→8→6→4→2」などと書きます。人狼が生き残ったまま残り2人になると負けですから、あと4回处刑を行うことができ、これを「吊り回数4回」であるといいます。
+        p 吊り回数というのは、例えば现在10人のとき、处刑で1人、人狼に襲われて1人死ぬので1日で計2人死ぬと考え、これを「10→8→6→4→2」などと書きます。人狼が生き残ったまま残り2人になると負けですから、あと4回处刑を行うことができ、これを「吊り回数4回」であるといいます。
         p そこで、10→8のところで猎人がGJしたと仮定しましょう。すると、10の次は9になります。すると「10→9→7→5→3→1」となります。すると、吊り回数は5回に増えていることがわかります。これを吊り回数が増えたといいます。
         p さて、前述のように猎人は邪魔な存在ですから、人狼は猎人を是が非でも殺したいはずです。なので、猎人は基本<strong>COしてはいけません</strong>。猎人は自己を守ることはできないので、COしたらその日の夜にほぼ確実に殺されることでしょう。もし猎人がCOするとしても、終盤になってからですが、基本はCOしないものとみていいでしょう。
         p また、猎人がCOしないのにはもう一つ理由があります。猎人は人狼の噛みに対する抑止力ですから、猎人が死んだのがばれてしまったら人狼は自由に殺したい人を殺せます。これはまずい状況です。ですから、猎人は死んだ後も人狼に対して<b>プレッシャー</b>を与えつづける必要があるのです。猎人が死んだことを悟られてはいけないのです。
@@ -135,7 +135,7 @@ section.manual.long
         section
           h4 騙りについて
           details
-            summary 灵能騙りがありがちですが、占卜师を騙ってもいいです。潜伏も選択肢の1つです。
+            summary 灵能騙りがありがちですが、占卜师を騙ってもいいです。潜伏も选择肢の1つです。
             p 人狼阵营の人は<b>騙る</b>（他的职业になりすましてCOしたり结果を発表したりする）ことができます。これがないと村人有利に進んでしまうので、基本的に何かを騙ることになります。
             p とはいっても、人狼が全员騙りに出るのは危険であり、そういうのは一般に奇策とみなされます。最低でも一人は潜伏しているのがよいでしょう。人狼の場合には、何かを騙る場合と全潜伏の場合もあります。全潜伏の場合は、騙るのは狂人（后述）に任せるということになります。
             p 人狼がよく騙るのは<strong>灵能者</strong>です。人狼はそもそも誰が人狼か把握していますから、本物の灵能者と同じ结果を出すことも可能です。ただし、灵能者はローラーされやすいという欠点があります。
