--- a/manual/changelog.jade
+++ b/manual/changelog.jade
@@ -6,7 +6,7 @@ section.manual
     li.change 背徳者が、妖狐が全滅した場合にまだ子狐や狐憑きが残っているのに自殺してしまうバグを修正しました。 (045679e)
   h2 v1.10.5(ae9b27b;2015-10-08)
   ul
-    li.change 冒涜者の出現人数が闇鍋セーフティ低以上で調整されるようになりました。(9a61dc8)
+    li.change 冒涜者の出现人数が闇鍋セーフティ低以上で調整されるようになりました。(9a61dc8)
   h2 v1.10.4(9a61dc8;2015-08-26)
   ul
     li.change 冒涜者が一部の职业を冒涜した場合に、冒涜相手ではなく自己が狐憑きとなるように変更しました。(0578740)
@@ -24,7 +24,7 @@ section.manual
     li.change 硬汉人狼と贪婪的狼が同時に能力を発動した場合の挙動が変わりました。従来は後から発動したほうのみデメリットが適用されていたのを、両方適用されるように変更しました（硬汉人狼が優先されます）。(a8746d)
   h2 v1.10.1-7(85e8d46;2015-05-23)
   ul
-    li.bugfix 间谍が村を去ったと同時に恶女に変化した場合、恶女が能力の対象を選択しても反映されなくなるバグを修正しました。(27a994e)
+    li.bugfix 间谍が村を去ったと同時に恶女に変化した場合、恶女が能力の対象を选择しても反映されなくなるバグを修正しました。(27a994e)
   h2 v1.10.1-6(f325239;2015-04-28)
   ul
     li.bugfix 人狼系・吸血鬼・妖狐が陷阱师に护卫されたまたは炸弹魔に爆弾を仕掛けられた状态で人狼に襲撃された場合、陷阱师・炸弹魔の効果が発動しないバグを修正しました。(5c0066a)
@@ -42,14 +42,14 @@ section.manual
   ul
     li.change Endless黑暗火锅に途中参加する場合、部屋の人数の上限に達していても强行退出の人がいる場合はその枠に入れるようになりました。(ead3f31)
     li.bugfix Endless黑暗火锅に途中参加した場合头像が表示されないバグを修正しました。(ead3f31)
-    li.new 昼間の背景色は評判が悪かったため戻りました。マイページの「色設定」から游戏画面の色を自由に設定できるようになりました。(eea8ea8)
+    li.new 昼間の背景色は評判が悪かったため戻りました。マイページの「色设定」から游戏画面の色を自由に设定できるようになりました。(eea8ea8)
     li.new 强行退出を行なった場合ログが出るようにしました（本人と灵界に対して表示）。(4cd711a)
   h2 v1.10.1-1(02a9244;2015-01-31)
   ul
     li.bugfix Endless黑暗火锅で転生人数が多すぎると游戏が停止するバグを修正しました。(943580d)
   h2 v1.10.1(e157944;2015-01-31)
   ul
-    li.bugfix Endless黑暗火锅で配役・出現阵营情報が表示されないバグを修正しました。(aa1c03b)
+    li.bugfix Endless黑暗火锅で配役・出现阵营情報が表示されないバグを修正しました。(aa1c03b)
     li.bugfix Endless黑暗火锅で途中参加した人が参加尚未分配の間に发言した場合、ログが全员に見えていたのを观战者にしか見えないように修正しました。(0df7afb)
     li.new 「强行退出」機能を追加しました。蘇生を辞退すると死亡した後に蘇生されません。また、突然死した場合は自動的に强行退出となります。(6021481)
     li.change 昼間の背景色を変更しました。(d98b6b4)
@@ -70,7 +70,7 @@ section.manual
   ul
     li.new 新职业「炸弹魔」を追加しました。(0727296)
     li.bugfix 弗兰肯斯坦が面包店を吸収しても面包店として扱われないバグを修正しました。(46da76d)
-    li.bugfix 面包店が死亡した後蘇生して再度死亡した場合にそれを知らせるログが出現しないバグを修正しました。(5d42c01)
+    li.bugfix 面包店が死亡した後蘇生して再度死亡した場合にそれを知らせるログが出现しないバグを修正しました。(5d42c01)
   h2 v1.9.9-3(a0224b5;2014-12-20)
   ul
     li.bugfix 妖术师が何らかのサブ职业（猎人の护卫・カルトなど）を持った状态で人狼占卜师に占われた場合に游戏進行が停止するバグを修正しました。(49e4e99)
@@ -79,7 +79,7 @@ section.manual
     li.bugfix 骗子が猎人・風来猎人・犬の护卫を受けている場合に占卜结果が表示されないことがあるバグを修正しました。(5d00239)
   h2 v1.9.9-2(b0dd475;2014-10-28)
   ul
-    li.bugfix 黑暗火锅安全性「高」以上で见习占卜师が単独で出現することがあるバグを修正しました。(fd90a88)
+    li.bugfix 黑暗火锅安全性「高」以上で见习占卜师が単独で出现することがあるバグを修正しました。(fd90a88)
   h2 v1.9.9-1(ca43c43;2014-09-23)
   ul
     li.bugfix 看板娘を吸収した弗兰肯斯坦が人狼に襲われて死亡したときに効果が発動しないバグを修正しました。(b8db251)
@@ -90,11 +90,11 @@ section.manual
     li.bugfix 碍事的狂人に邪魔された場合の占卜结果のログが正しくないバグを修正しました。(0776baa)
   h2 v1.9.8-2(7610870;2014-08-24)
   ul
-    li.bugfix 半份黑暗火锅で配役に「人狼系」を設定しなかった場合、配役に「人狼系1」と表示されるバグを修正しました。(a9eab8c)
+    li.bugfix 半份黑暗火锅で配役に「人狼系」を设定しなかった場合、配役に「人狼系1」と表示されるバグを修正しました。(a9eab8c)
   h2 v1.9.8-1(46b7db7;2014-08-08)
   ul
     li.bugfix 弗兰肯斯坦が老人を吸収した場合、圣职者・巫女の能力で老衰を防げないバグを修正しました。(e377f88)
-    li.bugfix 二重身が变态杀人狂を対象選択しても死亡しないバグを修正しました。(2f72f48)
+    li.bugfix 二重身が变态杀人狂を対象选择しても死亡しないバグを修正しました。(2f72f48)
     li.bugfix 弗兰肯斯坦が闹事者を吸収して能力を使用した場合、その夜に死亡すると能力がキャンセルされるバグを修正しました。(a639ffa)
     li.bugfix 3日目以降に怪诞狂热者が能力を使用できないバグを修正しました。(37e93ee)
   h2 v1.9.8(d77098a;2014-07-26)
@@ -103,11 +103,11 @@ section.manual
   h2 v1.9.7-7(2162d20;2014-07-20)
   ul
     li.change 配役「疯狂的世界」の内訳を変更しました。(23ad317)
-    li.change 最小開始人数（替身君を含めた人数）を4人から6人に変更しました。(787438a)
+    li.change 最小开始人数（替身君を含めた人数）を4人から6人に変更しました。(787438a)
   h2 v1.9.7-6(2f4be1f;2014-07-18)
   ul
     li.bugfix 碍事的狂人・诅咒师・猎人などの効果が重なった場合、2日以上続くことがあるバグを修正しました。(867176b)
-    li.change 女王观战者・狂人狼の安全性高以上での出現確率が1/10になりました。(7166a31)
+    li.change 女王观战者・狂人狼の安全性高以上での出现確率が1/10になりました。(7166a31)
   h2 v1.9.7-5(b64ac5c;2014-07-13)
   ul
     li.bugfix 替身君が吸血鬼になった場合サーバーが停止するバグを修正しました。(877c010)
@@ -124,8 +124,8 @@ section.manual
 
   h2 v1.9.7-2(b556a59;2014-05-25)
   ul
-    li.bugfix 恋人が複数組存在して設定「恋人はそれぞれ独立する」がありの場合、恋人胜利のメッセージの人数が間違っているバグを修正しました。(b4377c2)
-    li.change 恋人が複数組生存していて設定「恋人はそれぞれ独立する」がありの場合、生存者が全员恋人の場合は恋人胜利で终了するように修正しました。(b4377c2)
+    li.bugfix 恋人が複数組存在して设定「恋人はそれぞれ独立する」がありの場合、恋人胜利のメッセージの人数が間違っているバグを修正しました。(b4377c2)
+    li.change 恋人が複数組生存していて设定「恋人はそれぞれ独立する」がありの場合、生存者が全员恋人の場合は恋人胜利で终了するように修正しました。(b4377c2)
   h2 v1.9.7-1(0901f21;2014-04-28)
   ul 
     li.bugfix 替身君が人狼占卜师・威吓的狼になった場合突然死するバグを修正しました。(f8fa062)
@@ -227,7 +227,7 @@ section.manual
   ul
     li.new 「ミラーズホロウの人狼」から新しい选项「决胜投票」を追加しました。「なし」の場合は従来通りの動作です。「重新投票」にした場合は重新投票時に候補者が上位のみになります。「常に行う」にした場合は投票後に必ず上位の候補者のみの决胜投票が行われます。(7bbacc4)
     li.new 新职业「国王」を追加しました。(0b5677b)
-    li.new 灵界で职业か見えるかどうかの选项名を「灵界表示」に変更し、選択肢を「あり」「なし」から「常にあり」・「あり」（デフォルト）・「なし」の3段階に変更しました。「あり」は誰かが蘇生する可能性がある場合のみ表示しません（游戏中でも、蘇生可能性が無くなった場合表示されるようになります）。「常にあり」では蘇生职业があっても职业などを表示します。また、これに伴って、黑暗火锅で蘇生职业が出現した場合に「蘇生职业が存在するため「蘇生职业が存在するので、天国から职业が見られなくなりました。」というメッセージは出現しないようになりました。(502222e)
+    li.new 灵界で职业か見えるかどうかの选项名を「灵界表示」に変更し、选择肢を「あり」「なし」から「常にあり」・「あり」（デフォルト）・「なし」の3段階に変更しました。「あり」は誰かが蘇生する可能性がある場合のみ表示しません（游戏中でも、蘇生可能性が無くなった場合表示されるようになります）。「常にあり」では蘇生职业があっても职业などを表示します。また、これに伴って、黑暗火锅で蘇生职业が出现した場合に「蘇生职业が存在するため「蘇生职业が存在するので、天国から职业が見られなくなりました。」というメッセージは出现しないようになりました。(502222e)
   h2 v1.9.1-2(734377f;2013-12-15)
   ul
     li.bugfix 威吓的狼に威嚇された人が商品から荷物を受け取ったり圣职者に护卫されたり教会信者になったりした場合にその後ずっと能力が使用できなくなるバグを修正しました。(d8bfab2)
@@ -252,19 +252,19 @@ section.manual
     li.new 量子人狼で夜の長さが1分より長い場合は注意を表示するようになりました。(8f10acc)
   h2 v1.8.9-1(c55bab4;2013-11-26)
   ul
-    li.bugfix 模仿者や二重身が2日目以降に怪诞狂热者・跟踪狂・丘比特・流氓・魅惑的女狼に変化した際に、対象選択できなかったり突然死したりするバグを修正しました。(c5a251d)
+    li.bugfix 模仿者や二重身が2日目以降に怪诞狂热者・跟踪狂・丘比特・流氓・魅惑的女狼に変化した際に、対象选择できなかったり突然死したりするバグを修正しました。(c5a251d)
     li.change 逃亡者の能力使用先が吸血鬼に襲われたときに、逃亡者が死ななかったのを死ぬように修正しました。(222d9ea)
   h2 v1.8.9(d44e993;2013-11-26)
   ul
     li.change マイページの战绩展示および黑暗火锅の阵营表示において、蝙蝠の阵营を「蝙蝠」から「其他」に、吸血鬼の阵营を「其他」から「吸血鬼阵营」に変更しました。(531994d)
     li.change 逃亡者が吸血鬼の襲撃および魔女の毒薬の対象になったときの動作を、「死ぬ」から「死なない」に変更しました。これに加えて人狼に襲撃されても死にませんが、其他の要因では死亡します。(facfe1a)
-    li.change 逃亡者・策士が猎人または陷阱师に护卫されている状态で能力の対象に人狼を選択した場合の動作が、「死なない」だったのを「死ぬ」に修正しました。(facfe1a)
-    li.change 逃亡者・策士が狂人狼を対象に選択した場合の動作を「死ぬ」から「死なない」に変更しました。(7ea3146)
-    li.bugfix 占卜结果が「立刻知道」の設定のときに占卜师が妖狐を占った場合に、夜明けに死亡ログが出る前に灵界に移動するバグを修正しました。(b9559a4)
+    li.change 逃亡者・策士が猎人または陷阱师に护卫されている状态で能力の対象に人狼を选择した場合の動作が、「死なない」だったのを「死ぬ」に修正しました。(facfe1a)
+    li.change 逃亡者・策士が狂人狼を対象に选择した場合の動作を「死ぬ」から「死なない」に変更しました。(7ea3146)
+    li.bugfix 占卜结果が「立刻知道」の设定のときに占卜师が妖狐を占った場合に、夜明けに死亡ログが出る前に灵界に移動するバグを修正しました。(b9559a4)
     li.bugfix 诅咒师に呪いをかけられた人が、次の日になっても发言できないままになるバグを修正しました。(adf1e63)
-    li.change 吸血鬼・死亡笔记・魔女が1日目の夜に能力を発動できないように修正しました。また、贪婪的狼が1人目の対象選択した後に欲張る能力を発動できないバグを修正しました。(f774e74,f609fdc)
-    li.bugfix 人狼占卜师が商人から占卜套装を受け取った場合に、対象選択画面がわかりにくい問題を改善しました。(68b3d44)
-    li.change 黑暗火锅安全性中以上で、占卜师・猎人が出現する確率が上昇しました。さらに、狂人狼が出現する場合必ず狂人系职业も出現するようになりました。また、黑暗火锅安全性高以上で女王观战者が2人以上出現しないようになりました。(ca3411a)
+    li.change 吸血鬼・死亡笔记・魔女が1日目の夜に能力を発動できないように修正しました。また、贪婪的狼が1人目の対象选择した後に欲張る能力を発動できないバグを修正しました。(f774e74,f609fdc)
+    li.bugfix 人狼占卜师が商人から占卜套装を受け取った場合に、対象选择画面がわかりにくい問題を改善しました。(68b3d44)
+    li.change 黑暗火锅安全性中以上で、占卜师・猎人が出现する確率が上昇しました。さらに、狂人狼が出现する場合必ず狂人系职业も出现するようになりました。また、黑暗火锅安全性高以上で女王观战者が2人以上出现しないようになりました。(ca3411a)
     li.bugfix 硬汉人狼が能力を発動して圣职者に守られた人を襲った場合に、死なないままチャットが灵界に移動して昼に投票もできなくなるバグを修正しました。(86b6b9e)
     li.change 猎人・陷阱师が吸血鬼の襲撃を守れるように変更しました。陷阱师に护卫されている人を吸血鬼が襲った場合、その吸血鬼が死にます。(7325719)
     li.change 吸血鬼が埋毒者・猫又を襲った場合の動作を、「全员からランダムに一人毒で死ぬ」から「その吸血鬼が毒で死ぬ」変更しました。(7325719)
