--- a/client/templates/game/game.jade
+++ b/client/templates/game/game.jade
@@ -24,273 +24,274 @@
         //- dd(name="category_Foobar")
 
       p: input(type="submit",value="开始")
-  .infobox
-    div
-    #jobinfo
-  form#jobform(hidden)
-    input(type="hidden",name="commandname")
-    input(type="hidden",name="jobtype")
-    ul#form_players
-    #form_day(hidden).jobformarea
-      p
-        | 请投票选择要处刑的人：
-        input(type="submit",value="投票",data-job="_day")
-    #form_Waiting(hidden).jobformarea
-      p
-        | 请选择希望就职的角色:
-        input(type="submit",value="选择",data-job="Waiting")
-    #form_GameMaster(hidden).jobformarea
-      p
-        | 请选择要处死的人:
-        input(type="submit",value="杀死",data-job="GameMaster")
-    #form__Werewolf(hidden).jobformarea
-      p
-        | 请选择要杀死的人：
-        input(type="submit",value="杀死",data-job="_Werewolf")
-    #form_WolfDiviner(hidden).jobformarea
-      p
-        | 人狼占卜师请选择一个要占卜的人（占卜非强制）：
-        input(type="submit",value="占卜",data-job="WolfDiviner")
-    #form_GreedyWolf(hidden).jobformarea
-      p
-        | 在希望满足自身贪欲的场合下请选择（非强制）:
-        input(type="submit",value="贪欲满盈",data-job="GreedyWolf")
-    #form_Diviner(hidden).jobformarea
-      p
-        | 请选择一个要占卜的人：
-        input(type="submit",value="占卜",data-job="Diviner")
-    #form_TinyFox(hidden).jobformarea
-      p
-        | 请选择一个要占卜的人：
-        input(type="submit",value="占卜",data-job="TinyFox")
-    #form_Guard(hidden).jobformarea
-      p
-        | 请选择一个要护卫的人:
-        input(type="submit",value="护卫",data-job="Guard")
-    #form_Magician(hidden).jobformarea
-      p
-        | 请选择一个要复活的人:
-        input(type="submit",value="复活",data-job="Magician")
-    #form_Spy(hidden).jobformarea
-      p
-        input(type="submit",value="任务完成(离开村子)",data-job="Spy")
-    #form_Fugitive(hidden).jobformarea
-      p
-        | 请选择要逃亡到谁家里:
-        input(type="submit",value="逃亡",data-job="Fugitive")
-    #form_Merchant(hidden).jobformarea
-      p
-        | 请选择商品的收件人:
-        select(name="Merchant_kit")
-          option(value="Diviner") 占卜套装
-          option(value="Psychic") 灵能套装
-          option(value="Guard") 守护套装
-        input(type="submit",value="发送",data-job="Merchant")
-    #form_Liar(hidden).jobformarea
-      p
-        | 请选择一个要占卜的人：
-        input(type="submit",value="占卜",data-job="Liar")
-    #form_Copier(hidden).jobformarea
-      p
-        | 模仿者请选择模仿对象（非强制）：
-        input(type="submit",value="模仿",data-job="Copier")
-    #form_Light(hidden).jobformarea
-      p
-        | 你现在持有死亡笔记（非强制）：
-        input(type="submit",value="在死亡笔记上写名字",data-job="Light")
-    #form_Cupid(hidden).jobformarea
-      p
-        | 请选择要成为恋人2人中的1人:
-        input(type="submit",value="射出爱之箭",data-job="Cupid")
-    #form_Lover(hidden).jobformarea
-      p
-        | 请选择要成为恋人的人:
-        input(type="submit",value="变成恋人",data-job="Lover")
-    #form_Stalker(hidden).jobformarea
-      p
-        | 请选择要跟踪的对象:
-        input(type="submit",value="跟踪",data-job="Stalker")
-    #form_Spellcaster(hidden).jobformarea
-      p
-        | 请选择要诅咒的人（非强制）:
-        input(type="submit",value="诅咒他",data-job="Spellcaster")
-    #form_Priest(hidden).jobformarea
-      p
-        | 请选择一个要守护的人（非强制）:
-        input(type="submit",value="用神圣的力量守护",data-job="Priest")
-    #form_PI(hidden).jobformarea
-      p
-        | 请选择要调查的人（非强制）:
-        input(type="submit",value="调查",data-job="PI")
-    #form_Sorcerer(hidden).jobformarea
-      p
-        | 请选择要调查的人:
-        input(type="submit",value="调查",data-job="Sorcerer")
-    #form_Doppleganger(hidden).jobformarea
-      p
-        | 请选择一个人作为二重身的对象:
-        input(type="submit",value="选择",data-job="Doppleganger")
-    #form_CultLeader(hidden).jobformarea
-      p
-        | 请选择一个人使他成为信者:
-        input(type="submit",value="发展为信者",data-job="CultLeader")
-    #form_Vampire(hidden).jobformarea
-      p
-        | 请选择一个要袭击的人:
-        input(type="submit",value="杀死",data-job="Vampire")
-    #form_Cat(hidden).jobformarea
-      p
-        | 请选择一个要复活的人（非强制）:
-        input(type="submit",value="复活",data-job="Cat")
-    #form_Witch(hidden).jobformarea
-      p
-        | 请选择使用魔药的对象（非强制）:
-        select(name="Witch_drug")
-          option(value="revive") 复活药
-          option(value="kill") 毒药
-        input(type="submit",value="用药",data-job="Witch")
-    #form_OccultMania(hidden).jobformarea
-      p
-        | 请指定一个对象:
-        input(type="submit",value="指定",data-job="OccultMania")
-    #form_Dog(hidden).jobformarea
-    #form_Dog1(hidden).jobformarea
-      p
-        | 袭击你的饲主（非强制）:
-        input(type="submit",value="袭击饲主",data-job="Dog")
-    #form_Dog2(hidden).jobformarea
-      p
-        | 请选择你的饲主:
-        input(type="submit",value="选为饲主",data-job="Dog")
-    #form_Dictator(hidden).jobformarea
-      p
-        | 终止讨论，指定处刑对象（只有一次）:
-        input(type="submit",value="处刑",data-job="Dictator")
-    #form_Trapper(hidden).jobformarea
-      p
-        | 请选择要护卫的对象:
-        input(type="submit",value="护卫",data-job="Trapper")
-    #form_WolfBoy(hidden).jobformarea
-      p
-        | 想要让谁看起来像人狼（非强制）:
-        input(type="submit",value="选择",data-job="WolfBoy")
-    #form_MinionSelector(hidden).jobformarea
-      p
-        | 请指定狼的仆从:
-        input(type="submit",value="指定",data-job="MinionSelector")
-    #form_Thief(hidden).jobformarea
-      p
-        | 请选择一个职业:
-        input(type="submit",value="选择",data-job="Thief")
-    #form_Hoodlum(hidden).jobformarea
-      p
-        | 请选择你仇恨的人:
-        input(type="submit",value="选择",data-job="Hoodlum")
-    #form__Quantum_Diviner(hidden).jobformarea
-      p
-        | 请选择一个要占卜的人：
-        input(type="submit",value="占卜",data-job="_Quantum_Diviner")
-    #form__Quantum_Werewolf(hidden).jobformarea
-      p
-        | 请选择要杀死的人：
-        input(type="submit",value="杀死",data-job="_Quantum_Werewolf")
-    #form_Counselor(hidden).jobformarea
-      p
-        | 请选择你要策反的人（非强制）:
-        input(type="submit",value="选择",data-job="Counselor")
-    #form_Miko(hidden).jobformarea
-      p
-        input(type="submit",value="守护自己（非强制）",data-job="Miko")
-    #form_FascinatingWolf(hidden).jobformarea
-      p
-        | 请选择要诱惑的人:
-        input(type="submit",value="诱惑",data-job="FascinatingWolf")
-    #form_ToughWolf(hidden).jobformarea
-      p
-        | 想要使用能力的时候请点此处:
-        input(type="submit",value="抱着觉悟杀了他",data-job="ToughWolf")
-    #form_ThreateningWolf(hidden).jobformarea
-      p
-        | 请选择要威吓的人（非强制）:
-        input(type="submit",value="威吓",data-job="ThreateningWolf")
-    #form_WanderingGuard(hidden).jobformarea
-      p
-        | 请选择一个要护卫的人:
-        input(type="submit",value="护卫",data-job="WanderingGuard")
-    #form_ObstructiveMad(hidden).jobformarea
-      p
-        | 请选择要妨碍的人:
-        input(type="submit",value="妨碍",data-job="ObstructiveMad")
-    #form_TroubleMaker(hidden).jobformarea
-      p
-        | 白天将有两人被处刑（只限一次）:
-        input(type="submit",value="引起混乱",data-job="TroubleMaker")
-    #form_BloodyMary(hidden).jobformarea
-      p
-        | 请选择要诅咒死的人:
-        input(type="submit",value="杀死",data-job="BloodyMary")
-    #form_SantaClaus(hidden).jobformarea
-      p
-        | 请选择要送礼物的对象:
-        input(type="submit",value="赠送",data-job="SantaClaus")
-    #form_Phantom(hidden).jobformarea
-      p
-        | 请选择要盗走职业能力的对象:
-        input(type="submit",value="选择",data-job="Phantom")
-    #form_BadLady(hidden).jobformarea
-    #form_BadLady1(hidden).jobformarea
-      p
-        | 首先请选择你的本命对象:
-        input(type="submit",value="求爱",data-job="BadLady")
-    #form_BadLady2(hidden).jobformarea
-      p
-        | 请选择要玩弄的对象:
-        input(type="submit",value="玩弄",data-job="BadLady")
-    #form_Pyrotechnist(hidden).jobformarea
-      p
-        | 准备放烟火的时候请点（只限一次）:
-        input(type="submit",value="放烟花",data-job="Pyrotechnist")
-    #form_Helper(hidden).jobformarea
-      p
-        | 请选择要帮助的对象:
-        input(type="submit",value="帮助",data-job="Helper")
-    #form_Bomber(hidden).jobformarea
-      p
-        | 请选择要送炸弹的人（非强制）:
-        input(type="submit",value="寄送",data-job="Bomber")
-    #form_Blasphemy(hidden).jobformarea
-      p
-        | 请选择要亵渎的人:
-        input(type="submit",value="亵渎",data-job="Blasphemy")
-    #form_Ushinotokimairi(hidden).jobformarea
-      p
-        | 请选择要诅咒的人:
-        input(type="submit",value="选择",data-job="Ushinotokimairi")
-  form#speakform
-    p
-      input(size="50",name="comment",required)
-      input(type="submit",value="发言")
-      span#gmsayopt
-      select(name="size")
-        option(value="small") 以小字号发言
-        option(value="",selected) 普通
-        option(value="big") 以大字号发言
-      select(name="mode")
-      label
-        input(type="checkbox",name="multilinecheck")
-        复数行
-      |  
-      span#time
-      input(type="button",value="遗言",name="willbutton")
-      input(type="button",value="规则",name="rulebutton",disabled)
-      select#chooseviewselect
-        option(value="all",selected) 全部
-        option(value="today") 今日
-        optgroup#chooseviewday(label="单日")
-      input(type="button",value="强行退出",name="norevivebutton",disabled)
-  form#willform(hidden)
-    p
-      textarea(name="will",cols="50",rows="3",maxlength="1000")
-      input(type="submit",value="决定")
+  #sticky
+      .infobox
+        div
+        #jobinfo
+      form#jobform(hidden)
+        input(type="hidden",name="commandname")
+        input(type="hidden",name="jobtype")
+        ul#form_players
+        #form_day(hidden).jobformarea
+          p
+            | 请投票选择要处刑的人：
+            input(type="submit",value="投票",data-job="_day")
+        #form_Waiting(hidden).jobformarea
+          p
+            | 请选择希望就职的角色:
+            input(type="submit",value="选择",data-job="Waiting")
+        #form_GameMaster(hidden).jobformarea
+          p
+            | 请选择要处死的人:
+            input(type="submit",value="杀死",data-job="GameMaster")
+        #form__Werewolf(hidden).jobformarea
+          p
+            | 请选择要杀死的人：
+            input(type="submit",value="杀死",data-job="_Werewolf")
+        #form_WolfDiviner(hidden).jobformarea
+          p
+            | 人狼占卜师请选择一个要占卜的人（占卜非强制）：
+            input(type="submit",value="占卜",data-job="WolfDiviner")
+        #form_GreedyWolf(hidden).jobformarea
+          p
+            | 在希望满足自身贪欲的场合下请选择（非强制）:
+            input(type="submit",value="贪欲满盈",data-job="GreedyWolf")
+        #form_Diviner(hidden).jobformarea
+          p
+            | 请选择一个要占卜的人：
+            input(type="submit",value="占卜",data-job="Diviner")
+        #form_TinyFox(hidden).jobformarea
+          p
+            | 请选择一个要占卜的人：
+            input(type="submit",value="占卜",data-job="TinyFox")
+        #form_Guard(hidden).jobformarea
+          p
+            | 请选择一个要护卫的人:
+            input(type="submit",value="护卫",data-job="Guard")
+        #form_Magician(hidden).jobformarea
+          p
+            | 请选择一个要复活的人:
+            input(type="submit",value="复活",data-job="Magician")
+        #form_Spy(hidden).jobformarea
+          p
+            input(type="submit",value="任务完成(离开村子)",data-job="Spy")
+        #form_Fugitive(hidden).jobformarea
+          p
+            | 请选择要逃亡到谁家里:
+            input(type="submit",value="逃亡",data-job="Fugitive")
+        #form_Merchant(hidden).jobformarea
+          p
+            | 请选择商品的收件人:
+            select(name="Merchant_kit")
+              option(value="Diviner") 占卜套装
+              option(value="Psychic") 灵能套装
+              option(value="Guard") 守护套装
+            input(type="submit",value="发送",data-job="Merchant")
+        #form_Liar(hidden).jobformarea
+          p
+            | 请选择一个要占卜的人：
+            input(type="submit",value="占卜",data-job="Liar")
+        #form_Copier(hidden).jobformarea
+          p
+            | 模仿者请选择模仿对象（非强制）：
+            input(type="submit",value="模仿",data-job="Copier")
+        #form_Light(hidden).jobformarea
+          p
+            | 你现在持有死亡笔记（非强制）：
+            input(type="submit",value="在死亡笔记上写名字",data-job="Light")
+        #form_Cupid(hidden).jobformarea
+          p
+            | 请选择要成为恋人2人中的1人:
+            input(type="submit",value="射出爱之箭",data-job="Cupid")
+        #form_Lover(hidden).jobformarea
+          p
+            | 请选择要成为恋人的人:
+            input(type="submit",value="变成恋人",data-job="Lover")
+        #form_Stalker(hidden).jobformarea
+          p
+            | 请选择要跟踪的对象:
+            input(type="submit",value="跟踪",data-job="Stalker")
+        #form_Spellcaster(hidden).jobformarea
+          p
+            | 请选择要诅咒的人（非强制）:
+            input(type="submit",value="诅咒他",data-job="Spellcaster")
+        #form_Priest(hidden).jobformarea
+          p
+            | 请选择一个要守护的人（非强制）:
+            input(type="submit",value="用神圣的力量守护",data-job="Priest")
+        #form_PI(hidden).jobformarea
+          p
+            | 请选择要调查的人（非强制）:
+            input(type="submit",value="调查",data-job="PI")
+        #form_Sorcerer(hidden).jobformarea
+          p
+            | 请选择要调查的人:
+            input(type="submit",value="调查",data-job="Sorcerer")
+        #form_Doppleganger(hidden).jobformarea
+          p
+            | 请选择一个人作为二重身的对象:
+            input(type="submit",value="选择",data-job="Doppleganger")
+        #form_CultLeader(hidden).jobformarea
+          p
+            | 请选择一个人使他成为信者:
+            input(type="submit",value="发展为信者",data-job="CultLeader")
+        #form_Vampire(hidden).jobformarea
+          p
+            | 请选择一个要袭击的人:
+            input(type="submit",value="杀死",data-job="Vampire")
+        #form_Cat(hidden).jobformarea
+          p
+            | 请选择一个要复活的人（非强制）:
+            input(type="submit",value="复活",data-job="Cat")
+        #form_Witch(hidden).jobformarea
+          p
+            | 请选择使用魔药的对象（非强制）:
+            select(name="Witch_drug")
+              option(value="revive") 复活药
+              option(value="kill") 毒药
+            input(type="submit",value="用药",data-job="Witch")
+        #form_OccultMania(hidden).jobformarea
+          p
+            | 请指定一个对象:
+            input(type="submit",value="指定",data-job="OccultMania")
+        #form_Dog(hidden).jobformarea
+        #form_Dog1(hidden).jobformarea
+          p
+            | 袭击你的饲主（非强制）:
+            input(type="submit",value="袭击饲主",data-job="Dog")
+        #form_Dog2(hidden).jobformarea
+          p
+            | 请选择你的饲主:
+            input(type="submit",value="选为饲主",data-job="Dog")
+        #form_Dictator(hidden).jobformarea
+          p
+            | 终止讨论，指定处刑对象（只有一次）:
+            input(type="submit",value="处刑",data-job="Dictator")
+        #form_Trapper(hidden).jobformarea
+          p
+            | 请选择要护卫的对象:
+            input(type="submit",value="护卫",data-job="Trapper")
+        #form_WolfBoy(hidden).jobformarea
+          p
+            | 想要让谁看起来像人狼（非强制）:
+            input(type="submit",value="选择",data-job="WolfBoy")
+        #form_MinionSelector(hidden).jobformarea
+          p
+            | 请指定狼的仆从:
+            input(type="submit",value="指定",data-job="MinionSelector")
+        #form_Thief(hidden).jobformarea
+          p
+            | 请选择一个职业:
+            input(type="submit",value="选择",data-job="Thief")
+        #form_Hoodlum(hidden).jobformarea
+          p
+            | 请选择你仇恨的人:
+            input(type="submit",value="选择",data-job="Hoodlum")
+        #form__Quantum_Diviner(hidden).jobformarea
+          p
+            | 请选择一个要占卜的人：
+            input(type="submit",value="占卜",data-job="_Quantum_Diviner")
+        #form__Quantum_Werewolf(hidden).jobformarea
+          p
+            | 请选择要杀死的人：
+            input(type="submit",value="杀死",data-job="_Quantum_Werewolf")
+        #form_Counselor(hidden).jobformarea
+          p
+            | 请选择你要策反的人（非强制）:
+            input(type="submit",value="选择",data-job="Counselor")
+        #form_Miko(hidden).jobformarea
+          p
+            input(type="submit",value="守护自己（非强制）",data-job="Miko")
+        #form_FascinatingWolf(hidden).jobformarea
+          p
+            | 请选择要诱惑的人:
+            input(type="submit",value="诱惑",data-job="FascinatingWolf")
+        #form_ToughWolf(hidden).jobformarea
+          p
+            | 想要使用能力的时候请点此处:
+            input(type="submit",value="抱着觉悟杀了他",data-job="ToughWolf")
+        #form_ThreateningWolf(hidden).jobformarea
+          p
+            | 请选择要威吓的人（非强制）:
+            input(type="submit",value="威吓",data-job="ThreateningWolf")
+        #form_WanderingGuard(hidden).jobformarea
+          p
+            | 请选择一个要护卫的人:
+            input(type="submit",value="护卫",data-job="WanderingGuard")
+        #form_ObstructiveMad(hidden).jobformarea
+          p
+            | 请选择要妨碍的人:
+            input(type="submit",value="妨碍",data-job="ObstructiveMad")
+        #form_TroubleMaker(hidden).jobformarea
+          p
+            | 白天将有两人被处刑（只限一次）:
+            input(type="submit",value="引起混乱",data-job="TroubleMaker")
+        #form_BloodyMary(hidden).jobformarea
+          p
+            | 请选择要诅咒死的人:
+            input(type="submit",value="杀死",data-job="BloodyMary")
+        #form_SantaClaus(hidden).jobformarea
+          p
+            | 请选择要送礼物的对象:
+            input(type="submit",value="赠送",data-job="SantaClaus")
+        #form_Phantom(hidden).jobformarea
+          p
+            | 请选择要盗走职业能力的对象:
+            input(type="submit",value="选择",data-job="Phantom")
+        #form_BadLady(hidden).jobformarea
+        #form_BadLady1(hidden).jobformarea
+          p
+            | 首先请选择你的本命对象:
+            input(type="submit",value="求爱",data-job="BadLady")
+        #form_BadLady2(hidden).jobformarea
+          p
+            | 请选择要玩弄的对象:
+            input(type="submit",value="玩弄",data-job="BadLady")
+        #form_Pyrotechnist(hidden).jobformarea
+          p
+            | 准备放烟火的时候请点（只限一次）:
+            input(type="submit",value="放烟花",data-job="Pyrotechnist")
+        #form_Helper(hidden).jobformarea
+          p
+            | 请选择要帮助的对象:
+            input(type="submit",value="帮助",data-job="Helper")
+        #form_Bomber(hidden).jobformarea
+          p
+            | 请选择要送炸弹的人（非强制）:
+            input(type="submit",value="寄送",data-job="Bomber")
+        #form_Blasphemy(hidden).jobformarea
+          p
+            | 请选择要亵渎的人:
+            input(type="submit",value="亵渎",data-job="Blasphemy")
+        #form_Ushinotokimairi(hidden).jobformarea
+          p
+            | 请选择要诅咒的人:
+            input(type="submit",value="选择",data-job="Ushinotokimairi")
+      form#speakform
+        p
+          input(size="50",name="comment",required)
+          input(type="submit",value="发言")
+          span#gmsayopt
+          select(name="size")
+            option(value="small") 以小字号发言
+            option(value="",selected) 普通
+            option(value="big") 以大字号发言
+          select(name="mode")
+          label
+            input(type="checkbox",name="multilinecheck")
+            复数行
+          |  
+          span#time
+          input(type="button",value="遗言",name="willbutton")
+          input(type="button",value="规则",name="rulebutton",disabled)
+          select#chooseviewselect
+            option(value="all",selected) 全部
+            option(value="today") 今日
+            optgroup#chooseviewday(label="单日")
+          input(type="button",value="强行退出",name="norevivebutton",disabled)
+      form#willform(hidden)
+        p
+          textarea(name="will",cols="50",rows="3",maxlength="1000")
+          input(type="submit",value="决定")
   #logs
   
