--- a/manual/changelog.jade
+++ b/manual/changelog.jade
@@ -46,7 +46,7 @@ section.manual
     li.bugfix Endless黑暗火锅で転生人数が多すぎると游戏が停止するバグを修正しました。(943580d)
   h2 v1.10.1(e157944;2015-01-31)
   ul
-    li.bugfix Endless黑暗火锅で配役・出现阵营情報が表示されないバグを修正しました。(aa1c03b)
+    li.bugfix Endless黑暗火锅で配置・出现阵营情報が表示されないバグを修正しました。(aa1c03b)
     li.bugfix Endless黑暗火锅で途中参加した人が参加尚未分配の間に发言した場合、ログが全员に見えていたのを观战者にしか見えないように修正しました。(0df7afb)
     li.new 「强行退出」機能を追加しました。蘇生を辞退すると死亡した後に蘇生されません。また、突然死した場合は自動的に强行退出となります。(6021481)
     li.change 昼間の背景色を変更しました。(d98b6b4)
@@ -57,7 +57,7 @@ section.manual
     li.bugfix 二重身等が変化した場合职业名の表示がおかしくなることがあるバグを修正しました。(42215b6)
     li.bugfix 替身君が人狼系で他の生存している人狼系が全て孤独的狼の場合、替身君が襲撃せずに突然死するバグを修正しました。(da1492f)
     li.change 孤独的狼が襲撃可能になった後に他の人狼系が襲撃可能な状态になった場合、孤独的狼は襲撃不可能に戻るようになりました。(da1492f)
-    li.new 新配役「Endless黑暗火锅」を追加しました。主に游戏性がまだα版です。(232f155)
+    li.new 新配置「Endless黑暗火锅」を追加しました。主に游戏性がまだα版です。(232f155)
   h2 v1.9.10-1(79c9b96;2015-01-01)
   ul
     li.bugfix 同じ人に複数の炸弹魔が爆弾を仕掛けてその人が处刑により死亡した場合、1人しか道連れにしないバグを修正しました。(f0ba0d5)
@@ -87,7 +87,7 @@ section.manual
     li.bugfix 碍事的狂人に邪魔された場合の占卜结果のログが正しくないバグを修正しました。(0776baa)
   h2 v1.9.8-2(7610870;2014-08-24)
   ul
-    li.bugfix 半份黑暗火锅で配役に「人狼系」を设定しなかった場合、配役に「人狼系1」と表示されるバグを修正しました。(a9eab8c)
+    li.bugfix 半份黑暗火锅で配置に「人狼系」を设定しなかった場合、配置に「人狼系1」と表示されるバグを修正しました。(a9eab8c)
   h2 v1.9.8-1(46b7db7;2014-08-08)
   ul
     li.bugfix 弗兰肯斯坦が老人を吸収した場合、圣职者・巫女の能力で老衰を防げないバグを修正しました。(e377f88)
@@ -99,7 +99,7 @@ section.manual
     li.new 期間限定职业「烟火师」を追加しました。(1b67df5)
   h2 v1.9.7-7(2162d20;2014-07-20)
   ul
-    li.change 配役「疯狂的世界」の内訳を変更しました。(23ad317)
+    li.change 配置「疯狂的世界」の内訳を変更しました。(23ad317)
     li.change 最小开始人数（替身君を含めた人数）を4人から6人に変更しました。(787438a)
   h2 v1.9.7-6(2f4be1f;2014-07-18)
   ul
@@ -109,7 +109,7 @@ section.manual
   ul
     li.bugfix 替身君が吸血鬼になった場合サーバーが停止するバグを修正しました。(877c010)
     li.bugfix 替身君に恋人等のサブ职业が付加された場合突然死することがあるバグを修正しました。(8264297)
-    li.change 配役「疯狂的世界」の内訳を変更しました。(83b0238)
+    li.change 配置「疯狂的世界」の内訳を変更しました。(83b0238)
   h2 v1.9.7-4
   ul
     li.change 怪盗に职业を盗まれた場合、恋人などのサブ职业が消滅するように変更しました。(ff607ba)
@@ -207,7 +207,7 @@ section.manual
   h2 v1.9.4-1(5104f87;2013-12-28)
   ul
     li.bugfix 占卜结果「立刻知道」で人狼占卜师が占卜师を占った場合、翌朝になる前に死亡するバグを修正しました。(38482c8)
-    li.new 黑暗火锅安全性に「超(α)」を追加しました。「高」以上にバランスのいい配役を行いますが、まだ実験段階の機能となっています。(eff95e8)
+    li.new 黑暗火锅安全性に「超(α)」を追加しました。「高」以上にバランスのいい配置を行いますが、まだ実験段階の機能となっています。(eff95e8)
   h2 v1.9.4(35a4f34;2013-12-24)
   ul
     li.new 期間限定职业「圣诞老人」を追加しました。(e1a5f43)
@@ -241,7 +241,7 @@ section.manual
   ul
     li.new 新职业「風来猎人」を追加しました。(44919bb)
     li.bugfix 恋人・背德者などが後追いで死亡する場合で、2連鎖目以上の場合死亡しないことがあるバグを修正しました。(1b281e3)
-    li.change 黑暗火锅安全性が中以上の場合に、配役の人狼の数がより安定するように修正しました。(2bfa2ec)
+    li.change 黑暗火锅安全性が中以上の場合に、配置の人狼の数がより安定するように修正しました。(2bfa2ec)
   h2 v1.8.9-2(389afc5;2013-11-30)
   ul
     li.bugfix 贪婪的狼・硬汉人狼が能力をした場合に、その夜だけでなく次以降の夜にも効果が継続するバグを修正しました。(5da7967)
