--- a/manual/play-owner.jade
+++ b/manual/play-owner.jade
@@ -1,29 +1,29 @@
 section.manual
-  p: a(href="/play") 返回
-  h1 房主的流程
-  p 以下是建立新房间成为房主的流程说明。
+  p: a(href="/manual/play") 返回
+  h1 房主的操作流程
+  p 接下来将会解说房主如何建造房间准备游戏。
 
-  h2 建立新房间
-  p 在<a href="/rooms">房间一览</a>的页面的下方，有<a href="/newroom">新建房间</a>这样的一个选项，点击它就能打开设定新房间的页面。
-  h3 输入房间的设定
-  p 在「房间名」里输入新房间的名字。
-  p 勾选「密码」复选框，然后输入设定的密码，就会建立不输入密码不能进入的房间。想进行圈内人的人狼游戏的时候很方便。想建立谁都能进来的房间请不要勾选「密码」复选框。<strong>就算是加密了的房间，在游戏结束后也会对全员公开</strong>。请不要在房间内泄漏个人信息。
-  p 在「简介」里，可以输入在房间一览页面中显示的简介。没有也没关系。
-  p 「最大人数」是<strong>最多可以容纳的人数</strong>。人数没到那个数量也可以开始游戏。但是，最少要有4个人。
-  p 「匿名模式」是，选择是的话<strong>就会在入室的时候决定名字，而隐藏参加者的真实ID。</strong>。可以在不知道谁是谁的情况下玩人狼游戏。反之选择否的情况下，就会公开玩家ID，用之前登录的名字参加游戏，能知道谁是谁。
-  p 「GM」是，选择是的话<strong>房主会成为GM</strong>。GM（游戏管理员）不能加入游戏。在游戏中可以一直确认全员的职业和发言，可以对全员或者个人发送信息。
-  h3 新建房间
-  p 其他的设定，会在新建房间之后设定。
-  p 以上的设定结束后，就点击「新建房间」按钮新建房间吧。点击按钮后就会新建房间，房主会自动进入新建的房间。
+  h2 建造新房间
+  p 在<a href="/rooms">房间一览</a>页面下方有一个<a href="/newroom">新建房间</a>的链接，点击这个链接即可设定新建一个怎样的房间。
+  h3 配置一个房间
+  p 「房间名」一栏中需要输入房间的名字。
+  p 选中「密码」复选框，即可输入密码，建造一个必须输入正确密码才能加入的房间。适合于熟人间进行游戏。不选中「密码」复选框时，所有人都可以加入这个房间。<strong>即使加密的房间，在游戏结束后也将向所有人公开</strong>。请注意不要在房间内公开个人的隐私信息。
+  p 「简介」一栏中可以输入房间的简介，简介将显示在房间列表中。这一栏可以留空。
+  p 「房间规则」将限制<strong>能够进行游戏的最大人数</strong>。即便不能召集最大人数也能开始游戏。但是开始游戏最低需要五人。
+  p 「匿名模式」选中时，将<strong>隐藏玩家的账号</strong>，昵称将在加入游戏时现场设定。在所有人互相不知道谁是谁的情况下进行游戏。匿名模式下将不显示玩家设定的称号。
+  p 「GM」选中时<strong>房主将成为GM</strong>。GM（游戏管理员）将不会加入游戏。GM能够随时查看房间内所有人的发言，能够向房间全员或者房间内的任意一个人发出消息。
+  h3 准备建成房间
+  p 其他设定将在房间建成后进行。
+  p 以上设定结束后，点击「新建房间」按钮完成新建。房间建成后，房主将自动进入房间。
 
-  h2 建立房间后
+  h2 房间建成后
   p
-    img(src="/images/manual-play-owner-1.png",alt="刚建立房间后房主看到的画面")
-  p 房主可以看到「加入游戏」「展开游戏开始界面」「将参加者踢出游戏」「废弃这个房间」这几个按钮。「加入游戏」以外都是房主专用的按钮。
-  p 点击「加入游戏」就可以作为玩家登录。在匿名模式：是的房间中，请在这时出现的加入游戏对话框中决定你的名字。
-  p 加入游戏后，「退出游戏」「准备/取消准备」「帮手」3个按钮会取代「加入游戏」出现。这些按钮对于房主之外也是一样的，详细请在<a href="play-other">房主之外的流程</a>确认。
-  h3 设定配置
-  p 点击「展开游戏开始界面」后，会出现规则设定界面（也有一开始就有的时候）。
+    img(src="/images/manual-play-owner-1.png",alt="房建刚建成时的样子")
+  p 对房主而言，房间内有「加入游戏」「展开游戏开始界面」「将参加者踢出游戏」「废弃这个房间」这几个按钮。除了「加入游戏」都是房主专用的。
+  p 点击「加入游戏」按钮即可作为参加者加入游戏。在匿名模式的房间里，此时需要设定一个显示给他人看的昵称。
+  p 加入游戏后「加入游戏」将被「退出游戏」「准备/取消准备」「帮手」这三个按钮取代。这三个按钮的使用对所有人来说都是相同的，因此请参照<a href="play-other">房主以外的操作流程</a>。
+  h3 设定房间的规则
+  p 点击「展开游戏开始界面」按钮后，将显示房间的设定画面（有时不点击也会出现）。
   p
     img(src="/images/manual-play-owner-3.png",alt="规则设定界面")
   p 设定了规则后，点击最下面的「开始」按钮就可以开始游戏了。
@@ -31,36 +31,41 @@ section.manual
   p 要变更配置，可以用下面的「职业」的选择框来变更。
   p 配置中，不仅有一般的人狼配置的「普通1」「普通2」「普通3」，还有几种以特殊的职业来享受人狼游戏的特殊的配置可以利用。
   h4 自由配置
-  p 选择下面的<b>特殊规则</b>里有的<strong>自由选择</strong>后，可以完全自由的决定配置。选择了自由配置后，会出现关于月下人狼所有职业的职业数选择框。
-  p 村人的数量是参加者的数量减去其他职业的数量的结果。村人的数量是负的话说明参加者数量不够，不能用那个配置开始游戏。
+  p 选择下面的<b>特殊规则</b>里有的<strong>自由配置</strong>后，可以完全自由的决定配置。选择了自由配置后，会出现关于月下人狼所有职业的职业数选择框。
+  p 村人的数量是参加者的数量减去其他职业的数量的结果。村人的数量是负的话说明参加者数量不够，不能以这个配置开始游戏。
   h4 黑暗火锅
-  p 另外的<strong>黑暗火锅</strong>是随机决定配置的模式。选择黑暗火锅后会出现「黑暗火锅选项」。
+  p <strong>黑暗火锅</strong>是随机决定配置的模式。选择黑暗火锅后会出现「黑暗火锅选项」。
   p 在黑暗火锅中一个人狼也没有的话会很困扰，所以黑暗火锅选项可以设定人狼的数量（实际现在好像不能设定）。按照人数适当设定吧。妖狐的数量也能设定。
   p 更下面的选择框中，可以选择黑暗火锅的安全度和是否公开配置的设定。
-  p 黑暗火锅的安全度中，可以设定随机生成配置的限制。低会进行人外数量的调整，中还会进行阵营数的调整，高会进行职业调整（如贵族一定伴随奴隶，共有不会只有1人），超则会额外进行平衡性调整。超超只进行职业与平衡调整，而逆会进行人外数调整，并使平衡性尽可能的偏离。
-  p 配置公开中，「公开职业一览」会在游戏开始后公开随机设置的配置，可用「规则」按钮参照。「只公开阵营数」中只公开村人阵营，人狼阵营（人狼和狂人之类），妖狐阵营等的数量。选择「不公开」的话就没有关于配置的情报。
+  p 黑暗火锅的安全度中，可以设定随机生成配置的限制。「低」会进行人外数量的调整，「中」还会进行阵营数的调整，「高」会进行职业调整（如贵族一定伴随奴隶，共有不会只有1人），「超」则会额外进行平衡性调整。「超超」只进行职业与平衡调整，而「逆」会进行人外数调整，并使平衡性尽可能的偏离。
+  p 配置公开中，「公开职业一览」会在游戏开始后公开随机设置的配置，可点击「规则」按钮参照。「只公开阵营数」中只公开村人阵营，人狼阵营（人狼和狂人之类），妖狐阵营等的数量。选择「不公开」的话就没有关于配置的情报。
   h4 追加要素的设定
   p 下面的「决定者」「权力者」「死亡笔记」「狼的仆从」「酒鬼」的复选框，选中就会使用对应的追加要素。不管哪个在一般的人狼游戏中都不会使用。
   dl
-    dt 决定者
-    dd 参加者的一人会被选为「决定者」（本人也不知道）。白天的处刑投票平票时，会处刑决定者投票的那个人。
+    dt 决定1
+    dd 参加者的随机一人会被选为「决定者」（本人也不知道）。白天的处刑投票中，决定者投票具有优先决定权，记为1票但等价于1.5票。
     dt 权力者
-    dd 参加者的一人会被选为「权力者」（本人也不知道）。白天的处刑投票中、权力者的投票记为两票。
+    dd 参加者的随机一人会被选为「权力者」（本人也不知道）。白天的处刑投票中，权力者的投票记为2票。
     dt 死亡笔记
-    dd 每天晚上，参加者中一人会收到死亡笔记。拥有死亡笔记的人可以从生存者中选择一人杀死。
+    dd 死亡笔记会在所有参加者中传递。每天晚上，参加者中一人会收到死亡笔记。拥有死亡笔记的人可以从生存者中选择一人杀死。
     dt 狼的仆从
-    dd 在第一天晚上，人狼队伍的一个人拥有从其他参加者中选择一个人成为狼的仆从的权利。 被选成狼的仆从的人能力不变变成人狼侧的人。也就是说胜利条件变为人狼阵营的胜利。
+    dd 在第一天晚上，人狼队伍的一个人拥有从其他参加者中选择一个人成为「狼的仆从」的权利。 被选成狼的仆从的人技能不变，变成人狼侧的人。例如占卜师变为狼的仆从后仍然能够占卜，但胜利条件变为人狼阵营的胜利。
     dt 酒鬼
-    dd 参加者的一人会成为「酒鬼」。酒鬼到第二天晚上为止会认为自己是「村人」，就算有占卜师之类的能力也不能发挥。到了第3天会醒来。
+    dd 参加者的一人会成为「酒鬼」。酒鬼到第三天白天为止会认为自己是「村人」，就算有占卜师之类的能力也不能发挥。到了第三天夜里会醒来。
 
   h3 设定规则
   p 在后面的「规则」栏可以设定各种规则。
   h4 替身君的设定
   p 「第一天夜里」中，可以设定关于<strong>替身君</strong>（初日牺牲者）的设定。
-  p 因为人狼是从第一天夜里开始游戏的，在第一天夜里被人狼袭击的人什么都不能做就会gameover。因为那样太可怜了，第一天晚上作为代替，叫做<strong>替身君</strong>的NPC会死亡。在网上的人狼游戏中是一般的设定。
-  p 设定成「有」的话，就会成为使用替身君的情况。
+  p 「第一天夜里就被人狼杀死的人，只能干看着游戏发展实在是太可怜了」，替身君基于这种考虑作为第一夜的牺牲者诞生的。在网上的人狼游戏中是一般的设定。
+  p 设定成「有」的话，游戏参加者中就会出现一名「替身君」，替身君可能会持有技能，例如占卜。替身君如果持有技能，将随机指定目标发动技能。
   p 设定成「无（玩家会被杀）」的话，就会不使用替身君，参加者中第一天有人会死亡。
-  p 设定成「无（没有人会死）」的话虽然不使用替身君，但是第一天晚上人狼不能进行袭击。虽然从结果来看和「替身君死亡」没有什么区别，但一般会使用使用替身君的设定。
+  p 设定成「无（没有人会死）」的话，虽然不使用替身君，但是第一天晚上人狼不能进行袭击。虽然从结果来看和「替身君死亡」没有什么区别，但一般会使用有替身君的设定。
+
+  h4 替身安全性
+  p 设定成「自由」的话，替身君能够成为任何职业，包括但不限于人狼、妖狐、占卜师、女王观战者。
+  p 设定成「无」的话，替身君不会成为任何人类以外（狼、妖狐、吸血鬼、恶魔）的职业。
+  p 设定为「有」的话，替身君除了不会成为任何人类以外的职业，还不会成为女王观战者、间谍II、埋毒者、猫又、血腥玛丽或贵族。
 
   h4 时间的设定
   p 下面的「昼」「夜」「犹豫」时间的设定。
@@ -70,15 +75,15 @@ section.manual
 
   h4 其他的设定
   p 更下面的是其他琐碎的设定。一般的只享受狼人游戏的话，全部默认也没有关系。对细节有强迫症的话请变更吧。
-  p 各个设定的说明只要把鼠标移上去就会显示。并且，会随着使用的职业不同，设定项目的数量会变动。
+  p 各个设定的说明只要把鼠标移上去就会显示。并且，会随着使用的配置不同，设定项目的数量会变动。
   h2 开始游戏
   p
     img(src="/images/manual-play-owner-2.png",alt="全员[ready]的状态")
   p 设定完了终于要开始游戏了。
   p 各参加者（包括房主）按下<b>准备/取消准备</b>按钮后，名字下面会出现<b>[ready]</b>的记号。有这个记号表明那个人已经做好了开始游戏的准备。再点一次就会消失。像上面那张图那样进入房间的所有人都亮起了<b>[ready]</b>后，点击「开始」按钮就可以开始游戏。
-  p 部屋に入ったくせに<b>[ready]</b>をつけない人は、「将参加者踢出游戏」ボタンを押して部屋から踢出ことができます。
+  p 对于那些明明加入了房间，却迟迟不<b>[ready]</b>的玩家，请点击「将参加者踢出游戏」按钮将其踢出房间。
   p 另外，参加者太少以至于那个房间无法玩人狼游戏的情况下，按下「废弃这个房间」按钮就可以废弃掉这个房间。不能玩人狼的房间请废弃掉结束。
 
   h2 开始游戏后
   p 请参考<a href="play-game">游戏开始后的流程</a>。
-
+  p 本页面由<b>islxyqwe</b>提供翻译。
