--- a/manual/play-owner.jade
+++ b/manual/play-owner.jade
@@ -1,29 +1,29 @@
 section.manual
-  p: a(href="/play") 返回
-  h1 房主的流程
-  p 以下是建立新房间成为房主的流程说明。
+  p: a(href="/manual/play") 返回
+  h1 房主的操作流程
+  p 接下来将会解说房主如何建造房间准备游戏。
 
-  h2 建立新房间
-  p 在<a href="/rooms">房间一览</a>的页面的下方，有<a href="/newroom">新建房间</a>这样的一个选项，点击它就能打开设定新房间的页面。
-  h3 输入房间的设定
-  p 在「房间名」里输入新房间的名字。
-  p 勾选「密码」复选框，然后输入设定的密码，就会建立不输入密码不能进入的房间。想进行圈内人的人狼游戏的时候很方便。想建立谁都能进来的房间请不要勾选「密码」复选框。<strong>就算是加密了的房间，在游戏结束后也会对全员公开</strong>。请不要在房间内泄漏个人信息。
-  p 在「简介」里，可以输入在房间一览页面中显示的简介。没有也没关系。
-  p 「最大人数」是<strong>最多可以容纳的人数</strong>。人数没到那个数量也可以开始游戏。但是，最少要有4个人。
-  p 「匿名模式」是，选择是的话<strong>就会在入室的时候决定名字，而隐藏参加者的真实ID。</strong>。可以在不知道谁是谁的情况下玩人狼游戏。反之选择否的情况下，就会公开玩家ID，用之前登录的名字参加游戏，能知道谁是谁。
-  p 「GM」是，选择是的话<strong>房主会成为GM</strong>。GM（游戏管理员）不能加入游戏。在游戏中可以一直确认全员的职业和发言，可以对全员或者个人发送信息。
-  h3 新建房间
-  p 其他的设定，会在新建房间之后设定。
-  p 以上的设定结束后，就点击「新建房间」按钮新建房间吧。点击按钮后就会新建房间，房主会自动进入新建的房间。
+  h2 建造新房间
+  p 在<a href="/rooms">房间一览</a>页面下方有一个<a href="/newroom">新建房间</a>的链接，点击这个链接即可设定新建一个怎样的房间。
+  h3 配置一个房间
+  p 「房间名」一栏中需要输入房间的名字。
+  p 选中「密码」复选框，即可输入密码，建造一个必须输入正确密码才能加入的房间。适合于熟人间进行游戏。不选中「密码」复选框时，所有人都可以加入这个房间。<strong>即使加密的房间，在游戏结束后也将向所有人公开</strong>。请注意不要在房间内公开个人的隐私信息。
+  p 「简介」一栏中可以输入房间的简介，简介将显示在房间列表中。这一栏可以留空。
+  p 「房间规则」将限制<strong>能够进行游戏的最大人数</strong>。即便不能召集最大人数也能开始游戏。但是开始游戏最低需要五人。
+  p 「匿名模式」选中时，将<strong>隐藏玩家的账号</strong>，昵称将在加入游戏时现场设定。在所有人互相不知道谁是谁的情况下进行游戏。匿名模式下将不显示玩家设定的称号。
+  p 「GM」选中时<strong>房主将成为GM</strong>。GM（游戏管理员）将不会加入游戏。GM能够随时查看房间内所有人的发言，能够向房间全员或者房间内的任意一个人发出消息。
+  h3 准备建成房间
+  p 其他设定将在房间建成后进行。
+  p 以上设定结束后，点击「新建房间」按钮完成新建。房间建成后，房主将自动进入房间。
 
-  h2 建立房间后
+  h2 房间建成后
   p
-    img(src="/images/manual-play-owner-1.png",alt="刚建立房间后房主看到的画面")
-  p 房主可以看到「加入游戏」「展开游戏开始界面」「将参加者踢出游戏」「废弃这个房间」这几个按钮。「加入游戏」以外都是房主专用的按钮。
-  p 点击「加入游戏」就可以作为玩家登录。在匿名模式：是的房间中，请在这时出现的加入游戏对话框中决定你的名字。
-  p 加入游戏后，「退出游戏」「准备/取消准备」「帮手」3个按钮会取代「加入游戏」出现。这些按钮对于房主之外也是一样的，详细请在<a href="play-other">房主之外的流程</a>确认。
-  h3 设定配置
-  p 点击「展开游戏开始界面」后，会出现规则设定界面（也有一开始就有的时候）。
+    img(src="/images/manual-play-owner-1.png",alt="房建刚建成时的样子")
+  p 对房主而言，房间内有「加入游戏」「展开游戏开始界面」「将参加者踢出游戏」「废弃这个房间」这几个按钮。除了「加入游戏」都是房主专用的。
+  p 点击「加入游戏」按钮即可作为参加者加入游戏。在匿名模式的房间里，此时需要设定一个显示给他人看的昵称。
+  p 加入游戏后「加入游戏」将被「退出游戏」「准备/取消准备」「帮手」这三个按钮取代。这三个按钮的使用对所有人来说都是相同的，因此请参照<a href="play-other">房主以外的操作流程</a>。
+  h3 设定房间的规则
+  p 点击「展开游戏开始界面」按钮后，将显示房间的设定画面（有时不点击也会出现）。
   p
     img(src="/images/manual-play-owner-3.png",alt="规则设定界面")
   p 设定了规则后，点击最下面的「开始」按钮就可以开始游戏了。
