--- a/manual/play-owner.jade
+++ b/manual/play-owner.jade
@@ -42,7 +42,7 @@ section.manual
   h4 追加要素的设定
   p 下面的「决定者」「权力者」「死亡笔记」「狼的仆从」「酒鬼」的复选框，选中就会使用对应的追加要素。不管哪个在一般的人狼游戏中都不会使用。
   dl
-    dt 决定1
+    dt 决定者
     dd 参加者的随机一人会被选为「决定者」（本人也不知道）。白天的处刑投票中，决定者投票具有优先决定权，记为1票但等价于1.5票。
     dt 权力者
     dd 参加者的随机一人会被选为「权力者」（本人也不知道）。白天的处刑投票中，权力者的投票记为2票。
