--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -222,10 +222,21 @@ body.heaven
   border-left 2px dashed #ffffff
   padding-left 0.4em
 
+//sticky_form
+.sticky
+  max-width 800px
+  margin-right 15px
+  position fixed
+  top 0px
+  z-index 10
+  border ridge
+  border-top-width 0
+
 //logs
 #logs
   //display table
-  width 100%
+  max-width 800px
+  margin-right 15px
   > div
     margin 0
     padding 1px
