--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -260,7 +260,7 @@ body.heaven
       text-align right
     div.comment
       display table-cell
-      width 100%
+      /*width 100%*/
       div
         //white-space pre-wrap
         white-space -moz-pre-wrap
