--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -267,7 +267,8 @@ body.heaven
         white-space -webkit-pre-wrap
         white-space pre-line
         word-wrap break-word
-        max-width 600px
+		word-break break-all
+        //max-width 600px
     div.comment.big
       font-size larger
       font-weight bold
