Revert "max-length"
This reverts commit a2fdea5f3ac919a2885eee201f191199d78c5528.

--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -262,9 +262,13 @@ body.heaven
       display table-cell
       width 100%
       div
+        //white-space pre-wrap
+        white-space -moz-pre-wrap
+        white-space -webkit-pre-wrap
         white-space pre-line
-        //word-wrap break-word
+        word-wrap break-word
 		word-break break-all
+        //max-width 600px
     div.comment.big
       font-size larger
       font-weight bold
