--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -261,14 +261,15 @@ body.heaven
     div.comment
       display table-cell
       width 100%
-      div
+	  div
+	    word-break break-all
+      /*div
         //white-space pre-wrap
         white-space -moz-pre-wrap
         white-space -webkit-pre-wrap
         white-space pre-line
         word-wrap break-word
-		word-break break-all
-        //max-width 600px
+        max-width 600px*/
     div.comment.big
       font-size larger
       font-weight bold
