--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -234,6 +234,9 @@ body.heaven
   border-top-width 0
 
 //logs
+#logs > div div.comment div{
+	    word-break: break-all;
+		}
 #logs
   //display table
   max-width 100%
@@ -261,7 +264,7 @@ body.heaven
     div.comment
       display table-cell
       width 100%
-      /*div
+	  /*div
         //white-space pre-wrap
         white-space -moz-pre-wrap
         white-space -webkit-pre-wrap
