--- a/client/templates/game/game.jade
+++ b/client/templates/game/game.jade
@@ -295,6 +295,9 @@
           input(type="button",value="规则",name="rulebutton",disabled)
           input(type="button",value="强行退出",name="norevivebutton",disabled)
           label(style="float:right;")
+            input(type="checkbox",id="widescreen",checked)
+            宽屏
+          label(style="float:right;")
             input(type="checkbox",id="isfloat",checked)
             浮动
       form#willform(hidden)
