--- a/client/templates/jobs/PI.jade
+++ b/client/templates/jobs/PI.jade
@@ -2,7 +2,7 @@ section.jobmanual
   h1 超常现象研究者
   p 「究极人狼」中登场的角色。村人侧。
   h2 特殊能力
-  p 在觉得合适的时机<strong>只限一次</strong>，夜里选择一个人，对这个人和他的左右两人进行占卜（会将所有玩家视为一个首尾相接的圆桌，来辨别相对的左右位置，一定会选中三人），判断其中是否有人狼。
+  p 在觉得合适的时机<strong>只限一次</strong>，夜里选择一个人，对这个人和他的左右两人进行占卜（会将所有玩家视为一个首尾相接的圆桌，来辨别相对的左右位置，一定会选中三人），判断其中是否有占卜结论<strong>不是「村人」</strong>的角色。
   p 如果被选中的那个人是妖狐，妖狐将被咒杀。
   p 如果被选中的那个人的左右中存在妖狐，左右的妖狐将不会被咒杀。
   h2 胜利条件
