--- a/client/templates/jobs/Stalker.jade
+++ b/client/templates/jobs/Stalker.jade
@@ -2,8 +2,10 @@ section.jobmanual
   h1 跟踪狂
   p 「ウルティマオンライン」的人狼游戏中出现过的职业。跟踪一个人然后变成那个人的阵营。
   h2 特殊能力
-  p 第一天夜里选择一名参加者，可以获知这个人的职业。
-  p 然后将转变为被跟踪人的阵营。胜利条件与自己和跟踪对象的生死，没有必然关系。
+  p 第一天夜里选择一名参加者，可以获知这个人的职业。然后将转变为被跟踪人的阵营。
+  p 跟踪后若被跟踪人的阵营发生了改变（包括恋人等副职业），跟踪狂的阵营也一同变化。
+  p 另外，跟踪了无阵营的职业（「蝙蝠」、「皮革匠」等）时，被跟踪人获得胜利时才能胜利。
+  p 特别的，复数个跟踪狂之间互相跟踪形成圆环，或者跟踪自己的时候无法取得胜利。
   p 没有选择对象的情况下则会猝死，这一点请务必注意。
   h2 胜利条件
   p 所属阵营的胜利
